--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -1,135 +1,137 @@
 {
-  "INTERNET_ERROR": "Check your internet connection.",
-  "COLLECTION": "Collection",
-  "NOW_PLAYING": "Now playing",
-  "SETTING": "Settings",
-  "OK": "OKAY",
-  "YES": "YES",
-  "NO": "NO",
-  "ALBUM": "Albums",
-  "TRACK": "Tracks",
-  "ARTIST": "Artists",
-  "THEME_MODE_LIGHT": "Light",
-  "THEME_MODE_DARK": "Dark",
-  "OPTIONS": "Options",
-  "DELETE_TRACK": "Delete track",
-  "SEARCH_HISTORY_SUBHEADER": "Your recent searches",
-  "SEARCH_RESULT_LOADER_LABEL": "Getting your music...",
-  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Search & save some music to see it here.\nSpin the refresh to see new stuff.",
-  "COLLECTION_TOP_SUBHEADER_ALBUM": "Latest album",
-  "COLLECTION_OTHER_SUBHEADER_ALBUM": "More albums",
-  "COLLECTION_TOP_SUBHEADER_TRACK": "Latest track",
-  "COLLECTION_OTHER_SUBHEADER_TRACK": "More tracks",
-  "COLLECTION_TOP_SUBHEADER_ARTIST": "Latest artist",
-  "COLLECTION_OTHER_SUBHEADER_ARTIST": "More artists",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Tracks",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Some insights of the album",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Are you sure?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Do you want to remove this album saved on your device?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Are you sure?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Do you want to remove this track saved on your device?",
-  "NOW_PLAYING_NEXT_TRACK": "NEXT",
-  "NOW_PLAYING_PREVIOUS_TRACK": "PREVIOUS",
-  "NOW_PLAYING_NOT_PLAYING_TITLE": "Nothing is being played",
-  "SETTING_GITHUB": "GITHUB",
-  "SETTING_STAR_GITHUB": "STAR THE PROJECT",
-  "SETTING_STARGAZERS_TITLE": "Project Stargazers",
-  "SETTING_STARGAZERS_SUBTITLE": "Thanks a lot for your support",
-  "SETTING_LANGUAGE_TITLE": "Language",
-  "SETTING_LANGUAGE_SUBTITLE": "Change the language of the app",
-  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "App restart required",
-  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Do you want to restart the app now?",
-  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Translation Providers",
-  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Thanks a lot for your support to the app.",
-  "SETTING_ACCENT_COLOR_TITLE": "Accent",
-  "SETTING_ACCENT_COLOR_SUBTITLE": "Change the accent coloring of the app",
-  "SETTING_THEME_TITLE": "Theme",
-  "SETTING_THEME_SUBTITLE": "Change the app to light or dark mode",
-  "ABOUT_TITLE": "About",
   "ABOUT_SUBTITLE": "Information about the app & its developers",
-  "NO_DOWNLOAD_UPDATE": "Your app is already updated",
-  "DOWNLOAD_UPDATE": "DOWNLOAD UPDATE",
-  "SETTING_APP_VERSION_TITLE": "Version",
-  "SETTING_APP_VERSION_SUBTITLE": "Information about current version of the app",
-  "SETTING_APP_VERSION_INSTALLED": "Installed version",
-  "SETTING_APP_VERSION_LATEST": "Latest version",
-  "MENU": "Menu",
-  "SEARCH_COLLECTION": "Search collection",
-  "SWITCH_THEME": "Switch theme",
-  "PLAY": "Play",
-  "PAUSE": "Pause",
-  "DELETE": "Delete",
-  "SHARE": "Share",
-  "ADD_TO_PLAYLIST": "Add to playlist",
-  "SAVE_TO_DOWNLOADS": "Save to downloads",
-  "COLLECTION_SEARCH_WELCOME": "Search albums, tracks or artists...",
-  "COLLECTION_SEARCH_NO_RESULTS": "Nothing like that could be found in your collection",
-  "PLAYLISTS": "Playlists",
-  "PLAYLIST": "Playlist",
-  "PLAYLISTS_SUBHEADER": "Your playlists",
-  "PLAYLISTS_CREATE": "Create a new playlist",
-  "PLAYLISTS_TEXT_FIELD_LABEL": "Playlist Name",
-  "PLAYLISTS_TEXT_FIELD_HINT": "Name for your new playlist",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Are you sure?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Do you want to delete this playlist?",
-  "CANCEL": "CANCEL",
-  "PLAYLIST_ADD_DIALOG_TITLE": "Add to playlist",
-  "PLAYLIST_ADD_DIALOG_BODY": "Select a playlist to add this track",
-  "PLAYLIST_TRACKS_SUBHEADER": "Here are the tracks in this playlist",
-  "TRANSFERS": "Transfers",
-  "SETTING_INDEXING_TITLE": "Collection",
-  "SETTING_INDEXING_SUBTITLE": "Include more folders in your collection",
-  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexed NUMBER_STRING of TOTAL_STRING tracks...",
-  "SETTING_INDEXING_DONE": "Indexed",
-  "SETTING_INDEXING_WARNING": "Do not interrupt the process.",
-  "REFRESH": "REFRESH",
-  "SEARCH_NO_RECENT_SEARCHES": "Your recent searches will show here",
-  "NO_INTERNET_TITLE": "No internet",
-  "NO_INTERNET_SUBTITLE": "Check your connection.",
-  "NO_COLLECTION_TITLE": "Empty collection",
-  "NO_COLLECTION_SUBTITLE": "No music found.\nChange where to look for the music from settings.",
-  "DISCORD": "DISCORD SERVER",
-  "EXIT_TITLE": "Exit",
-  "EXIT_SUBTITLE": "Do you want to exit Harmonoid?",
-  "A_TO_Z": "A to Z",
-  "DATE_ADDED": "Date added",
-  "SETTING_ACCENT_COLOR_AUTOMATIC": "Automatic accent",
-  "SETTING_MISCELLANEOUS_TITLE": "Miscellaneous",
-  "SETTING_MISCELLANEOUS_SUBTITLE": "Other settings in the app",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Enable iOS mechanics",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Set platform to TargetPlatform.iOS",
-  "SELECTED_DIRECTORY": "Selected directory:",
-  "LYRICS": "Lyrics",
-  "NOTIFICATION_LYRICS_TITLE": "Notification lyrics.",
-  "NOTIFICATION_LYRICS_SUBTITLE": "Show lyrics in a notification.",
-  "LYRICS_RETRIEVING": "Retrieving lyrics...",
-  "LYRICS_NOT_FOUND": "Lyrics not found.",
-  "COMING_UP": "Coming Up",
-  "ALBUM_SINGLE": "Album",
-  "TRACK_SINGLE": "Track",
-  "ARTIST_SINGLE": "Artist",
-  "SEARCH": "Search",
-  "ALBUMS_FROM_ARTIST": "Albums",
-  "TRACKS_FROM_ARTIST": "Tracks",
-  "REMOVE": "REMOVE",
+  "ABOUT_TITLE": "About",
   "ADD_NEW_FOLDER": "ADD NEW FOLDER",
   "ADD_TO_NOW_PLAYING": "Add to now playing",
-  "PLAY_NOW": "Play now",
-  "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
-  "SELECTED_DIRECTORIES": "Here's a list of what we've found so far",
-  "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
+  "ADD_TO_PLAYLIST": "Add to playlist",
+  "ALBUM": "Albums",
+  "ALBUMS_FROM_ARTIST": "Albums",
+  "ALBUM_SINGLE": "Album",
+  "ARTIST": "Artists",
+  "ARTIST_SINGLE": "Artist",
+  "A_TO_Z": "A to Z",
+  "BUFFERING": "Buffering...",
+  "CANCEL": "CANCEL",
+  "COLLECTION": "Collection",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Do you want to remove this album saved on your device?",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Are you sure?",
+  "COLLECTION_ALBUM_INFO_SUBHEADER": "Some insights of the album",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Do you want to delete this playlist?",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Are you sure?",
+  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Tracks",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Do you want to remove this track saved on your device?",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Are you sure?",
   "COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
+  "COLLECTION_OTHER_SUBHEADER_ALBUM": "More albums",
+  "COLLECTION_OTHER_SUBHEADER_ARTIST": "More artists",
+  "COLLECTION_OTHER_SUBHEADER_TRACK": "More tracks",
+  "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
+  "COLLECTION_SEARCH_NO_RESULTS": "Nothing like that could be found in your collection",
+  "COLLECTION_SEARCH_WELCOME": "Search albums, tracks or artists...",
+  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Search & save some music to see it here.\nSpin the refresh to see new stuff.",
+  "COLLECTION_TOP_SUBHEADER_ALBUM": "Latest album",
+  "COLLECTION_TOP_SUBHEADER_ARTIST": "Latest artist",
+  "COLLECTION_TOP_SUBHEADER_TRACK": "Latest track",
+  "COMING_UP": "Coming Up",
+  "DATE_ADDED": "Date added",
+  "DELETE": "Delete",
+  "DELETE_TRACK": "Delete track",
+  "DISCORD": "DISCORD SERVER",
+  "DOWNLOAD_UPDATE": "DOWNLOAD UPDATE",
+  "ENABLE_125_SCALING": "Enable 125% scaling.",
+  "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
+  "EXIT_SUBTITLE": "Do you want to exit Harmonoid?",
+  "EXIT_TITLE": "Exit",
+  "INTERNET_ERROR": "Check your internet connection.",
+  "KNOW_MORE": "KNOW MORE",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
+  "LYRICS": "Lyrics",
+  "LYRICS_NOT_FOUND": "Lyrics not found.",
+  "LYRICS_RETRIEVING": "Retrieving lyrics...",
+  "MENU": "Menu",
+  "NO": "NO",
+  "NOTIFICATION_LYRICS_SUBTITLE": "Show lyrics in a notification.",
+  "NOTIFICATION_LYRICS_TITLE": "Notification lyrics.",
+  "NOW_PLAYING": "Now playing",
+  "NOW_PLAYING_NEXT_TRACK": "NEXT",
+  "NOW_PLAYING_NOT_PLAYING_TITLE": "Nothing is being played",
+  "NOW_PLAYING_PREVIOUS_TRACK": "PREVIOUS",
+  "NO_COLLECTION_SUBTITLE": "No music found.\nChange where to look for the music from settings.",
+  "NO_COLLECTION_TITLE": "Empty collection",
+  "NO_DOWNLOAD_UPDATE": "Your app is already updated",
+  "NO_INTERNET_SUBTITLE": "Check your connection.",
+  "NO_INTERNET_TITLE": "No internet",
+  "OK": "OKAY",
+  "OPTIONS": "Options",
+  "PAUSE": "Pause",
+  "PLAY": "Play",
+  "PLAYLIST": "Playlists",
+  "PLAYLISTS_CREATE": "Create a new playlist",
+  "PLAYLISTS_SUBHEADER": "Your playlists",
+  "PLAYLISTS_TEXT_FIELD_HINT": "Name for your new playlist",
+  "PLAYLISTS_TEXT_FIELD_LABEL": "Playlist Name",
+  "PLAYLIST_ADD_DIALOG_BODY": "Select a playlist to add this track",
+  "PLAYLIST_ADD_DIALOG_TITLE": "Add to playlist",
+  "PLAYLIST_TRACKS_SUBHEADER": "Here are the tracks in this playlist",
+  "PLAY_NOW": "Play now",
   "RECOMMENDATIONS": "Recommendations",
-  "YOUTUBE_WELCOME": "Search for music or give a link",
-  "YOUTUBE_NO_RESULTS": "Nothing like that could be found.",
-  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online.",
+  "REFRESH": "REFRESH",
+  "REMOVE": "REMOVE",
   "RETRIEVING_INFO": "Retrieving info",
   "RETRIEVING_LINK": "Retrieving stream",
+  "SAVE_TO_DOWNLOADS": "Save to downloads",
+  "SEARCH": "Search",
+  "SEARCH_COLLECTION": "Search collection",
+  "SEARCH_HISTORY_SUBHEADER": "Your recent searches",
+  "SEARCH_NO_RECENT_SEARCHES": "Your recent searches will show here",
+  "SEARCH_RESULT_LOADER_LABEL": "Getting your music...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SELECTED_DIRECTORIES": "Here's a list of what we've found so far",
+  "SELECTED_DIRECTORY": "Selected directory:",
+  "SETTING": "Settings",
+  "SETTING_ACCENT_COLOR_AUTOMATIC": "Automatic accent",
+  "SETTING_ACCENT_COLOR_SUBTITLE": "Change the accent coloring of the app",
+  "SETTING_ACCENT_COLOR_TITLE": "Accent",
+  "SETTING_APP_VERSION_INSTALLED": "Installed version",
+  "SETTING_APP_VERSION_LATEST": "Latest version",
+  "SETTING_APP_VERSION_SUBTITLE": "Information about current version of the app",
+  "SETTING_APP_VERSION_TITLE": "Version",
+  "SETTING_GITHUB": "GITHUB",
+  "SETTING_INDEXING_DONE": "Indexed",
+  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexed NUMBER_STRING of TOTAL_STRING tracks...",
+  "SETTING_INDEXING_SUBTITLE": "Include more folders in your collection",
+  "SETTING_INDEXING_TITLE": "Collection",
+  "SETTING_INDEXING_WARNING": "Do not interrupt the process.",
+  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Thanks a lot for your support to the app.",
+  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Translation Providers",
+  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Do you want to restart the app now?",
+  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "App restart required",
+  "SETTING_LANGUAGE_SUBTITLE": "Change the language of the app",
+  "SETTING_LANGUAGE_TITLE": "Language",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Set platform to TargetPlatform.iOS",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Enable iOS mechanics",
+  "SETTING_MISCELLANEOUS_SUBTITLE": "Other settings in the app",
+  "SETTING_MISCELLANEOUS_TITLE": "Miscellaneous",
+  "SETTING_STARGAZERS_SUBTITLE": "Thanks a lot for your support",
+  "SETTING_STARGAZERS_TITLE": "Project Stargazers",
+  "SETTING_STAR_GITHUB": "STAR THE PROJECT",
+  "SETTING_THEME_SUBTITLE": "Change the app to light or dark mode",
+  "SETTING_THEME_TITLE": "Theme",
+  "SHARE": "Share",
   "STARTING_PLAYBACK": "Starting playback",
-  "BUFFERING": "Buffering...",
+  "SWITCH_THEME": "Switch theme",
+  "THEME_MODE_DARK": "Dark",
+  "THEME_MODE_LIGHT": "Light",
+  "THEME_MODE_SYSTEM": "System",
+  "TRACK": "Tracks",
+  "TRACKS_FROM_ARTIST": "Tracks",
+  "TRACK_SINGLE": "Track",
+  "TRANSFERS": "Transfers",
   "WARNING": "Warning",
-  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
-  "ENABLE_125_SCALING": "Enable 125% scaling.",
   "YEAR": "Year",
-  "KNOW_MORE": "KNOW MORE"
+  "YES": "YES",
+  "YOUTUBE": "YouTube",
+  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online",
+  "YOUTUBE_NO_RESULTS": "Nothing like that could be found",
+  "YOUTUBE_WELCOME": "Search for music or give a link"
 }
