--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -1,136 +1,137 @@
 {
-  "INTERNET_ERROR": "Controleer uw internet verbinding...",
-  "COLLECTION": "Collectie",
-  "NOW_PLAYING": "Speelt nu",
-  "SETTING": "Instellingen",
-  "OK": "OKÉ",
-  "YES": "JA",
-  "NO": "NEE",
-  "ALBUM": "Albums",
-  "TRACK": "Nummers",
-  "ARTIST": "Artiesten",
-  "THEME_MODE_LIGHT": "Licht",
-  "THEME_MODE_DARK": "Donker",
-  "THEME_MODE_SYSTEM": "Volg systeem thema",
-  "OPTIONS": "Opties",
-  "DELETE_TRACK": "Verwijder nummer",
-  "SEARCH_HISTORY_SUBHEADER": "Uw recente zoekopdrachten",
-  "SEARCH_RESULT_LOADER_LABEL": "Uw muziek verkrijgen...",
-  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Zoek- en sla muziek op om het hier te zien. Klik op vernieuwen om nieuwe dingen te zien.",
-  "COLLECTION_TOP_SUBHEADER_ALBUM": "Vorige album",
-  "COLLECTION_OTHER_SUBHEADER_ALBUM": "Meer albums",
-  "COLLECTION_TOP_SUBHEADER_TRACK": "Vorige nummer",
-  "COLLECTION_OTHER_SUBHEADER_TRACK": "Meer nummers",
-  "COLLECTION_TOP_SUBHEADER_ARTIST": "Vorige artiest",
-  "COLLECTION_OTHER_SUBHEADER_ARTIST": "Meer artiesten",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Hier zijn de nummers die u opgeslagen heeft",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Enkele inzichten in het album",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Weet u dat zeker?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Wilt u dit album van uw apparaat verwijderen?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Weet u dat zeker?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Wilt u dit album van uw apparaat verwijderen?",
-  "NOW_PLAYING_NEXT_TRACK": "VOLGENDE",
-  "NOW_PLAYING_PREVIOUS_TRACK": "VORIGE",
-  "NOW_PLAYING_NOT_PLAYING_TITLE": "Niks wordt afgespeeld...",
-  "SETTING_GITHUB": "GITHUB",
-  "SETTING_STAR_GITHUB": "GEEF DIT PROJECT EEN STER",
-  "SETTING_STARGAZERS_TITLE": "Project Stargazers",
-  "SETTING_STARGAZERS_SUBTITLE": "Heel erg bedankt voor uw steun!",
-  "SETTING_LANGUAGE_TITLE": "Taal",
-  "SETTING_LANGUAGE_SUBTITLE": "Verander de taal van de app",
-  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Opnieuw opstarten van de app is vereist",
-  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Wilt u de app nu opnieuw starten?",
-  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Vertalers",
-  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Heel erg bedankt voor uw steun voor de app",
-  "SETTING_ACCENT_COLOR_TITLE": "Accent",
-  "SETTING_ACCENT_COLOR_SUBTITLE": "Verander de accentkleur van de app",
-  "SETTING_THEME_TITLE": "Thema",
-  "SETTING_THEME_SUBTITLE": "Verander de app naar lichte of donkere modus",
-  "ABOUT_TITLE": "Over",
   "ABOUT_SUBTITLE": "Informatie over de app en haar ontwikkelaars",
-  "NO_DOWNLOAD_UPDATE": "Uw app is al geupdate",
-  "DOWNLOAD_UPDATE": "DOWNLOAD UPDATE",
-  "SETTING_APP_VERSION_TITLE": "Versie",
-  "SETTING_APP_VERSION_SUBTITLE": "Informatie over de huidige versie van de app",
-  "SETTING_APP_VERSION_INSTALLED": "Geïnstalleerde versie",
-  "SETTING_APP_VERSION_LATEST": "Laatste versie",
-  "MENU": "Menu",
-  "SEARCH_COLLECTION": "Zoek Collectie",
-  "SWITCH_THEME": "Wissel Thema",
-  "PLAY": "Afspelen",
-  "PAUSE": "Pauze",
-  "DELETE": "Verwijderen",
-  "SHARE": "Delen",
-  "ADD_TO_PLAYLIST": "Toevoegen aan afspeellijst",
-  "SAVE_TO_DOWNLOADS": "Sla op in downloads",
-  "COLLECTION_SEARCH_WELCOME": "Voer iets in om uw collectie te doorzoeken",
-  "COLLECTION_SEARCH_NO_RESULTS": "Dat kon niet in uw collectie gevonden worden",
-  "PLAYLISTS": "Afspeellijsten",
-  "PLAYLIST": "Afspeellijst",
-  "PLAYLISTS_SUBHEADER": "Jouw afspeellijsten",
-  "PLAYLISTS_CREATE": "Maak een nieuwe afspeellijst",
-  "PLAYLISTS_TEXT_FIELD_LABEL": "Naam afspeellijst",
-  "PLAYLISTS_TEXT_FIELD_HINT": "Naam voor uw nieuwe afspeellijst",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Weet u het zeker?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Wilt u deze afspeellijst van uw apparaat verwijderen?",
-  "CANCEL": "ANNULEER",
-  "PLAYLIST_ADD_DIALOG_TITLE": "Toevoegen aan afspeellijst",
-  "PLAYLIST_ADD_DIALOG_BODY": "Selecteer een afspeellijst en voeg dit nummer toe",
-  "PLAYLIST_TRACKS_SUBHEADER": "Hier zijn de nummers in deze afspeellijst",
-  "TRANSFERS": "Overdrachten",
-  "SETTING_INDEXING_TITLE": "Indexeren",
-  "SETTING_INDEXING_SUBTITLE": "Herindexeer uw muziek collectie",
-  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "NUMBER_STRING / TOTAL_STRING nummers geïndexeerd...",
-  "SETTING_INDEXING_DONE": "Uw muziek collectie is geïndexeerd",
-  "SETTING_INDEXING_WARNING": "Onderbreek het proces niet",
-  "REFRESH": "HERLADEN",
-  "SEARCH_NO_RECENT_SEARCHES": "Uw recente zoekopdrachten zullen hier getoond worden",
-  "NO_INTERNET_TITLE": "Geen Internet",
-  "NO_INTERNET_SUBTITLE": "Controleer uw verbinding",
-  "NO_COLLECTION_TITLE": "Lege Collectie",
-  "NO_COLLECTION_SUBTITLE": "Geen muziek gevonden",
-  "DISCORD": "DISCORD SERVER",
-  "EXIT_TITLE": "Afsluiten",
-  "EXIT_SUBTITLE": "Wilt u Harmonoid afsluiten?",
-  "A_TO_Z": "A tot Z",
-  "DATE_ADDED": "Datum Toegevoegd",
-  "SETTING_ACCENT_COLOR_AUTOMATIC": "Automatisch Accent",
-  "SETTING_MISCELLANEOUS_TITLE": "Diversen",
-  "SETTING_MISCELLANEOUS_SUBTITLE": "Overige instellingen in de app",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "iOS functies inschakelen",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Stel platform in op TargetPlatform.iOS",
-  "SELECTED_DIRECTORY": "Geselecteerde map:",
-  "LYRICS": "Songteksten",
-  "NOTIFICATION_LYRICS_TITLE": "Notificatie songteksten",
-  "NOTIFICATION_LYRICS_SUBTITLE": "Songteksten weergeven in notficaties",
-  "LYRICS_RETRIEVING": "Songteksten ophalen...",
-  "LYRICS_NOT_FOUND": "Songteksten niet gevonden.",
-  "COMING_UP": "Volgende",
-  "ALBUM_SINGLE": "Album",
-  "TRACK_SINGLE": "Nummer",
-  "ARTIST_SINGLE": "Artiest",
-  "SEARCH": "Zoeken",
-  "ALBUMS_FROM_ARTIST": "Albums van deze artiest",
-  "TRACKS_FROM_ARTIST": "Nummers van deze artiest.",
-  "REMOVE": "VERWIJDEREN",
+  "ABOUT_TITLE": "Over",
   "ADD_NEW_FOLDER": "NIEUWE MAP TOEVOEGEN",
   "ADD_TO_NOW_PLAYING": "Toevoegen aan nu afspelen",
-  "PLAY_NOW": "Nu afspelen",
-  "COLLECTION_SEARCH_LABEL": "Zoek in je collectie",
-  "SELECTED_DIRECTORIES": "Geselecteerde mappen:",
-  "ENABLE_ACRYLIC_BLUR": "Windows Acrylvervaging inschakelen",
+  "ADD_TO_PLAYLIST": "Toevoegen aan afspeellijst",
+  "ALBUM": "Albums",
+  "ALBUMS_FROM_ARTIST": "Albums van deze artiest",
+  "ALBUM_SINGLE": "Album",
+  "ARTIST": "Artiesten",
+  "ARTIST_SINGLE": "Artiest",
+  "A_TO_Z": "A tot Z",
+  "BUFFERING": "Bufferen...",
+  "CANCEL": "ANNULEER",
+  "COLLECTION": "Collectie",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Wilt u dit album van uw apparaat verwijderen?",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Weet u dat zeker?",
+  "COLLECTION_ALBUM_INFO_SUBHEADER": "Enkele inzichten in het album",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Wilt u deze afspeellijst van uw apparaat verwijderen?",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Weet u het zeker?",
+  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Hier zijn de nummers die u opgeslagen heeft",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Wilt u dit album van uw apparaat verwijderen?",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Weet u dat zeker?",
   "COLLECTION_INDEXING_LABEL": "Je lokale muziek wordt gesynchroniseerd. Sluit de app niet af.",
+  "COLLECTION_OTHER_SUBHEADER_ALBUM": "Meer albums",
+  "COLLECTION_OTHER_SUBHEADER_ARTIST": "Meer artiesten",
+  "COLLECTION_OTHER_SUBHEADER_TRACK": "Meer nummers",
+  "COLLECTION_SEARCH_LABEL": "Zoek in je collectie",
+  "COLLECTION_SEARCH_NO_RESULTS": "Dat kon niet in uw collectie gevonden worden",
+  "COLLECTION_SEARCH_WELCOME": "Voer iets in om uw collectie te doorzoeken",
+  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Zoek- en sla muziek op om het hier te zien. Klik op vernieuwen om nieuwe dingen te zien.",
+  "COLLECTION_TOP_SUBHEADER_ALBUM": "Vorige album",
+  "COLLECTION_TOP_SUBHEADER_ARTIST": "Vorige artiest",
+  "COLLECTION_TOP_SUBHEADER_TRACK": "Vorige nummer",
+  "COMING_UP": "Volgende",
+  "DATE_ADDED": "Datum Toegevoegd",
+  "DELETE": "Verwijderen",
+  "DELETE_TRACK": "Verwijder nummer",
+  "DISCORD": "DISCORD SERVER",
+  "DOWNLOAD_UPDATE": "DOWNLOAD UPDATE",
+  "ENABLE_125_SCALING": "Vergroting (125%) inschakelen",
+  "ENABLE_ACRYLIC_BLUR": "Windows Acrylvervaging inschakelen",
+  "EXIT_SUBTITLE": "Wilt u Harmonoid afsluiten?",
+  "EXIT_TITLE": "Afsluiten",
+  "INTERNET_ERROR": "Controleer uw internet verbinding...",
+  "KNOW_MORE": "KNOW MORE",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "Er moet ten minste één map in uw collectie blijven.",
+  "LYRICS": "Songteksten",
+  "LYRICS_NOT_FOUND": "Songteksten niet gevonden.",
+  "LYRICS_RETRIEVING": "Songteksten ophalen...",
+  "MENU": "Menu",
+  "NO": "NEE",
+  "NOTIFICATION_LYRICS_SUBTITLE": "Songteksten weergeven in notficaties",
+  "NOTIFICATION_LYRICS_TITLE": "Notificatie songteksten",
+  "NOW_PLAYING": "Speelt nu",
+  "NOW_PLAYING_NEXT_TRACK": "VOLGENDE",
+  "NOW_PLAYING_NOT_PLAYING_TITLE": "Niks wordt afgespeeld...",
+  "NOW_PLAYING_PREVIOUS_TRACK": "VORIGE",
+  "NO_COLLECTION_SUBTITLE": "Geen muziek gevonden",
+  "NO_COLLECTION_TITLE": "Lege Collectie",
+  "NO_DOWNLOAD_UPDATE": "Uw app is al geupdate",
+  "NO_INTERNET_SUBTITLE": "Controleer uw verbinding",
+  "NO_INTERNET_TITLE": "Geen Internet",
+  "OK": "OKÉ",
+  "OPTIONS": "Opties",
+  "PAUSE": "Pauze",
+  "PLAY": "Afspelen",
+  "PLAYLIST": "Playlists",
+  "PLAYLISTS_CREATE": "Maak een nieuwe afspeellijst",
+  "PLAYLISTS_SUBHEADER": "Jouw afspeellijsten",
+  "PLAYLISTS_TEXT_FIELD_HINT": "Naam voor uw nieuwe afspeellijst",
+  "PLAYLISTS_TEXT_FIELD_LABEL": "Naam afspeellijst",
+  "PLAYLIST_ADD_DIALOG_BODY": "Selecteer een afspeellijst en voeg dit nummer toe",
+  "PLAYLIST_ADD_DIALOG_TITLE": "Toevoegen aan afspeellijst",
+  "PLAYLIST_TRACKS_SUBHEADER": "Hier zijn de nummers in deze afspeellijst",
+  "PLAY_NOW": "Nu afspelen",
   "RECOMMENDATIONS": "Aanbevelingen",
-  "YOUTUBE_WELCOME": "Zoek naar muziek of geef een link",
-  "YOUTUBE_NO_RESULTS": "Zoiets was niet te vinden.",
-  "YOUTUBE_INTERNET_ERROR": "We spelen wat lokale muziek af, totdat je terug online bent.",
+  "REFRESH": "HERLADEN",
+  "REMOVE": "VERWIJDEREN",
   "RETRIEVING_INFO": "Info ophalen",
   "RETRIEVING_LINK": "Stream ophalen",
+  "SAVE_TO_DOWNLOADS": "Sla op in downloads",
+  "SEARCH": "Zoeken",
+  "SEARCH_COLLECTION": "Zoek Collectie",
+  "SEARCH_HISTORY_SUBHEADER": "Uw recente zoekopdrachten",
+  "SEARCH_NO_RECENT_SEARCHES": "Uw recente zoekopdrachten zullen hier getoond worden",
+  "SEARCH_RESULT_LOADER_LABEL": "Uw muziek verkrijgen...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SELECTED_DIRECTORIES": "Geselecteerde mappen:",
+  "SELECTED_DIRECTORY": "Geselecteerde map:",
+  "SETTING": "Instellingen",
+  "SETTING_ACCENT_COLOR_AUTOMATIC": "Automatisch Accent",
+  "SETTING_ACCENT_COLOR_SUBTITLE": "Verander de accentkleur van de app",
+  "SETTING_ACCENT_COLOR_TITLE": "Accent",
+  "SETTING_APP_VERSION_INSTALLED": "Geïnstalleerde versie",
+  "SETTING_APP_VERSION_LATEST": "Laatste versie",
+  "SETTING_APP_VERSION_SUBTITLE": "Informatie over de huidige versie van de app",
+  "SETTING_APP_VERSION_TITLE": "Versie",
+  "SETTING_GITHUB": "GITHUB",
+  "SETTING_INDEXING_DONE": "Uw muziek collectie is geïndexeerd",
+  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "NUMBER_STRING / TOTAL_STRING nummers geïndexeerd...",
+  "SETTING_INDEXING_SUBTITLE": "Herindexeer uw muziek collectie",
+  "SETTING_INDEXING_TITLE": "Indexeren",
+  "SETTING_INDEXING_WARNING": "Onderbreek het proces niet",
+  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Heel erg bedankt voor uw steun voor de app",
+  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Vertalers",
+  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Wilt u de app nu opnieuw starten?",
+  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Opnieuw opstarten van de app is vereist",
+  "SETTING_LANGUAGE_SUBTITLE": "Verander de taal van de app",
+  "SETTING_LANGUAGE_TITLE": "Taal",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Stel platform in op TargetPlatform.iOS",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "iOS functies inschakelen",
+  "SETTING_MISCELLANEOUS_SUBTITLE": "Overige instellingen in de app",
+  "SETTING_MISCELLANEOUS_TITLE": "Diversen",
+  "SETTING_STARGAZERS_SUBTITLE": "Heel erg bedankt voor uw steun!",
+  "SETTING_STARGAZERS_TITLE": "Project Stargazers",
+  "SETTING_STAR_GITHUB": "GEEF DIT PROJECT EEN STER",
+  "SETTING_THEME_SUBTITLE": "Verander de app naar lichte of donkere modus",
+  "SETTING_THEME_TITLE": "Thema",
+  "SHARE": "Delen",
   "STARTING_PLAYBACK": "Afspelen starten",
-  "BUFFERING": "Bufferen...",
+  "SWITCH_THEME": "Wissel Thema",
+  "THEME_MODE_DARK": "Donker",
+  "THEME_MODE_LIGHT": "Licht",
+  "THEME_MODE_SYSTEM": "System",
+  "TRACK": "Nummers",
+  "TRACKS_FROM_ARTIST": "Nummers van deze artiest.",
+  "TRACK_SINGLE": "Nummer",
+  "TRANSFERS": "Overdrachten",
   "WARNING": "Waarschuwing",
-  "LAST_COLLECTION_DIRECTORY_REMOVED": "Er moet ten minste één map in uw collectie blijven.",
-  "ENABLE_125_SCALING": "Vergroting (125%) inschakelen",
   "YEAR": "Year",
-  "KNOW_MORE": "KNOW MORE"
+  "YES": "JA",
+  "YOUTUBE": "YouTube",
+  "YOUTUBE_INTERNET_ERROR": "We spelen wat lokale muziek af, totdat je terug online bent.",
+  "YOUTUBE_NO_RESULTS": "Zoiets was niet te vinden.",
+  "YOUTUBE_WELCOME": "Zoek naar muziek of geef een link"
 }
