--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -1,136 +1,137 @@
 {
-  "INTERNET_ERROR": "Prosimo, preverite vašo internetno povezavo",
-  "COLLECTION": "Zbirka",
-  "NOW_PLAYING": "Zdaj se predvaja",
-  "SETTING": "Nastavitve",
-  "OK": "OK",
-  "YES": "JA",
-  "NO": "NE",
-  "ALBUM": "Albumi",
-  "TRACK": "Pesmi",
-  "ARTIST": "Skladatelji",
-  "THEME_MODE_LIGHT": "Svetli",
-  "THEME_MODE_DARK": "Temni",
-  "THEME_MODE_SYSTEM": "Sledi sistemski temi",
-  "OPTIONS": "Opcije",
-  "DELETE_TRACK": "Izbriši pesem",
-  "SEARCH_HISTORY_SUBHEADER": "Tvoja nedavna iskanja",
-  "SEARCH_RESULT_LOADER_LABEL": "Pridobivanje tvoje glasbe...",
-  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Poišči in shrani nekaj glasbe.\nZavrti osveži gumb, da se pokažejo nove pesmi.",
-  "COLLECTION_TOP_SUBHEADER_ALBUM": "Tukaj je zadnji shranjeni avtor",
-  "COLLECTION_OTHER_SUBHEADER_ALBUM": "Tukaj so shranjeni albumi",
-  "COLLECTION_TOP_SUBHEADER_TRACK": "Here is the latest track saved by you",
-  "COLLECTION_OTHER_SUBHEADER_TRACK": "Here are your other tracks",
-  "COLLECTION_TOP_SUBHEADER_ARTIST": "Here is the latest artist saved by you",
-  "COLLECTION_OTHER_SUBHEADER_ARTIST": "Tukaj so ustvarjalci, shranjeni v tvoji napravi.",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Tukaj so shranjene pesmi",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Nekaj stvari o albumu",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Izbriši ta album?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Ali si res prepričan...",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Ali hočeš izbrisati to?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Ali res hočeš izbrisati to pesem?",
-  "NOW_PLAYING_NEXT_TRACK": "NASLEDNJA",
-  "NOW_PLAYING_PREVIOUS_TRACK": "PREJŠNJA",
-  "NOW_PLAYING_NOT_PLAYING_TITLE": "Nič se trenutno ne predvaja",
-  "SETTING_GITHUB": "GITHUB",
-  "SETTING_STAR_GITHUB": "VŠEČKAJ PROJEKT",
-  "SETTING_STARGAZERS_TITLE": "Všečkerji projekta",
-  "SETTING_STARGAZERS_SUBTITLE": "Najlepša hvala za vašo podporo",
-  "SETTING_LANGUAGE_TITLE": "Jezik",
-  "SETTING_LANGUAGE_SUBTITLE": "Spremenite način prikaza aplikacije",
-  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Ponovni zagon aplikacije je potreben",
-  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Ali želiš ponovno zagnati aplikacijo zdaj?",
-  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Prevajalci projekta",
-  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Najlepša hvala za podporo pri aplikaciji",
-  "SETTING_ACCENT_COLOR_TITLE": "Odtenek",
-  "SETTING_ACCENT_COLOR_SUBTITLE": "Zamenjaj odtenek na aplikaciji",
-  "SETTING_THEME_TITLE": "Način",
-  "SETTING_THEME_SUBTITLE": "Menjaj med temnim in svetlim načinom",
-  "ABOUT_TITLE": "O nas",
   "ABOUT_SUBTITLE": "Informacije o nas...",
-  "NO_DOWNLOAD_UPDATE": "Aplikacija je že posodobljena.",
-  "DOWNLOAD_UPDATE": "PRENESI POSODOBITEV",
-  "SETTING_APP_VERSION_TITLE": "Verzija aplikacije",
-  "SETTING_APP_VERSION_SUBTITLE": "Informacija o trenutni verziji.",
-  "SETTING_APP_VERSION_INSTALLED": "Nameščena verzija",
-  "SETTING_APP_VERSION_LATEST": "Najnovejša verzija",
-  "MENU": "Meni",
-  "SEARCH_COLLECTION": "Preišči kolekcijo",
-  "SWITCH_THEME": "Zamenjaj temo",
-  "PLAY": "Predvajaj",
-  "PAUSE": "Ustavi",
-  "DELETE": "Izbriši",
-  "SHARE": "Deli",
-  "ADD_TO_PLAYLIST": "Dodaj na seznam predvajanja",
-  "SAVE_TO_DOWNLOADS": "Shrani med prenose",
-  "COLLECTION_SEARCH_WELCOME": "Vpiši nekaj za iskanje v tvoji kolekciji",
-  "COLLECTION_SEARCH_NO_RESULTS": "Nič nisem našel v tvoji kolekciji",
-  "PLAYLISTS": "Seznami predvajanja",
-  "PLAYLIST": "Seznam predvajanja",
-  "PLAYLISTS_SUBHEADER": "Tvoji seznami predvajanja",
-  "PLAYLISTS_CREATE": "Ustvari seznam predvajanja",
-  "PLAYLISTS_TEXT_FIELD_LABEL": "Ime Seznama predvajanja",
-  "PLAYLISTS_TEXT_FIELD_HINT": "Ime za tvoj seznam predvajanja",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Ali si prepričan?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Ali hočeš odstraniti seznam predvajanja?",
-  "CANCEL": "PREKLIČI",
-  "PLAYLIST_ADD_DIALOG_TITLE": "Dodaj na seznam predvajanja",
-  "PLAYLIST_ADD_DIALOG_BODY": "Izberi pesem za seznam predvajanja",
-  "PLAYLIST_TRACKS_SUBHEADER": "Tukaj so pesmi iz seznama predvajanja",
-  "TRANSFERS": "Prenosi",
-  "SETTING_INDEXING_TITLE": "Indeksiraj",
-  "SETTING_INDEXING_SUBTITLE": "Znova indeksiraj kolekcijo",
-  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indeksiranih NUMBER_STRING od TOTAL_STRING pesmi...",
-  "SETTING_INDEXING_DONE": "Tvoja kolekcija je indeksirana",
-  "SETTING_INDEXING_WARNING": "Ne prekinjaj procesa.",
-  "REFRESH": "OSVEŽI",
-  "SEARCH_NO_RECENT_SEARCHES": "Tvoji nedavni prenosi so tukaj",
-  "NO_INTERNET_TITLE": "Ni interneta",
-  "NO_INTERNET_SUBTITLE": "Preveri internetno povezavo",
-  "NO_COLLECTION_TITLE": "Prazna kolekcija",
-  "NO_COLLECTION_SUBTITLE": "Nič glasbe ni bilo najdene",
-  "DISCORD": "DISCORD STREŽNIK",
-  "EXIT_TITLE": "Izhod",
-  "EXIT_SUBTITLE": "Ali res hočeš zapreti aplikacijo?",
-  "A_TO_Z": "Od A do Z",
-  "DATE_ADDED": "Po datumu prenosa",
-  "SETTING_ACCENT_COLOR_AUTOMATIC": "Avtomatska barvna shema",
-  "SETTING_MISCELLANEOUS_TITLE": "Ostalo",
-  "SETTING_MISCELLANEOUS_SUBTITLE": "Ostale nastavitve aplikacije",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Vključi iOS uporabniški vmesnik",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Nastavi platformo na TargetPlatform.iOS",
-  "SELECTED_DIRECTORY": "Izbran direktorij:",
-  "LYRICS": "Besedilo pesmi",
-  "NOTIFICATION_LYRICS_TITLE": "Besedilo pesmi v obvestilu",
-  "NOTIFICATION_LYRICS_SUBTITLE": "Pokaži besedilo pesmi v obvestilih.",
-  "LYRICS_RETRIEVING": "Pridobivanje besedila pesmi...",
-  "LYRICS_NOT_FOUND": "Besedilo pesmi ni bilo najdeno.",
-  "COMING_UP": "Naslednje",
-  "ALBUM_SINGLE": "Album",
-  "TRACK_SINGLE": "Pesem",
-  "ARTIST_SINGLE": "Ustvarjalec",
-  "SEARCH": "Išči",
-  "ALBUMS_FROM_ARTIST": "Albumi od tega ustvarjalca.",
-  "TRACKS_FROM_ARTIST": "Pesmi od tega ustvarjalca.",
-  "REMOVE": "ODSTRANI",
+  "ABOUT_TITLE": "O nas",
   "ADD_NEW_FOLDER": "DODAJ NOV DIREKTORIJ",
   "ADD_TO_NOW_PLAYING": "Dodaj v seznam predvajanja",
-  "PLAY_NOW": "Predvajaj zdaj",
-  "COLLECTION_SEARCH_LABEL": "Pogled v tvojo zbirko",
-  "SELECTED_DIRECTORIES": "Izbrani direktoriji:",
-  "ENABLE_ACRYLIC_BLUR": "Vključi Windows Acrylic blur.",
+  "ADD_TO_PLAYLIST": "Dodaj na seznam predvajanja",
+  "ALBUM": "Albumi",
+  "ALBUMS_FROM_ARTIST": "Albumi od tega ustvarjalca.",
+  "ALBUM_SINGLE": "Album",
+  "ARTIST": "Skladatelji",
+  "ARTIST_SINGLE": "Ustvarjalec",
+  "A_TO_Z": "Od A do Z",
+  "BUFFERING": "Bufferanje...",
+  "CANCEL": "PREKLIČI",
+  "COLLECTION": "Zbirka",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Ali si res prepričan...",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Izbriši ta album?",
+  "COLLECTION_ALBUM_INFO_SUBHEADER": "Nekaj stvari o albumu",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Ali hočeš odstraniti seznam predvajanja?",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Ali si prepričan?",
+  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Tukaj so shranjene pesmi",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Ali res hočeš izbrisati to pesem?",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Ali hočeš izbrisati to?",
   "COLLECTION_INDEXING_LABEL": "Tvoja kolekcija se sinhronizira z aplikacijo.\nNi dobra ideja, da zapreš aplikacijo.",
+  "COLLECTION_OTHER_SUBHEADER_ALBUM": "Tukaj so shranjeni albumi",
+  "COLLECTION_OTHER_SUBHEADER_ARTIST": "Tukaj so ustvarjalci, shranjeni v tvoji napravi.",
+  "COLLECTION_OTHER_SUBHEADER_TRACK": "Here are your other tracks",
+  "COLLECTION_SEARCH_LABEL": "Pogled v tvojo zbirko",
+  "COLLECTION_SEARCH_NO_RESULTS": "Nič nisem našel v tvoji kolekciji",
+  "COLLECTION_SEARCH_WELCOME": "Vpiši nekaj za iskanje v tvoji kolekciji",
+  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Poišči in shrani nekaj glasbe.\nZavrti osveži gumb, da se pokažejo nove pesmi.",
+  "COLLECTION_TOP_SUBHEADER_ALBUM": "Tukaj je zadnji shranjeni avtor",
+  "COLLECTION_TOP_SUBHEADER_ARTIST": "Here is the latest artist saved by you",
+  "COLLECTION_TOP_SUBHEADER_TRACK": "Here is the latest track saved by you",
+  "COMING_UP": "Naslednje",
+  "DATE_ADDED": "Po datumu prenosa",
+  "DELETE": "Izbriši",
+  "DELETE_TRACK": "Izbriši pesem",
+  "DISCORD": "DISCORD STREŽNIK",
+  "DOWNLOAD_UPDATE": "PRENESI POSODOBITEV",
+  "ENABLE_125_SCALING": "Vključi 125% povečavo.",
+  "ENABLE_ACRYLIC_BLUR": "Vključi Windows Acrylic blur.",
+  "EXIT_SUBTITLE": "Ali res hočeš zapreti aplikacijo?",
+  "EXIT_TITLE": "Izhod",
+  "INTERNET_ERROR": "Prosimo, preverite vašo internetno povezavo",
+  "KNOW_MORE": "KNOW MORE",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "Vsaj en direktorij mora ostati v tvoji zbirki.",
+  "LYRICS": "Besedilo pesmi",
+  "LYRICS_NOT_FOUND": "Besedilo pesmi ni bilo najdeno.",
+  "LYRICS_RETRIEVING": "Pridobivanje besedila pesmi...",
+  "MENU": "Meni",
+  "NO": "NE",
+  "NOTIFICATION_LYRICS_SUBTITLE": "Pokaži besedilo pesmi v obvestilih.",
+  "NOTIFICATION_LYRICS_TITLE": "Besedilo pesmi v obvestilu",
+  "NOW_PLAYING": "Zdaj se predvaja",
+  "NOW_PLAYING_NEXT_TRACK": "NASLEDNJA",
+  "NOW_PLAYING_NOT_PLAYING_TITLE": "Nič se trenutno ne predvaja",
+  "NOW_PLAYING_PREVIOUS_TRACK": "PREJŠNJA",
+  "NO_COLLECTION_SUBTITLE": "Nič glasbe ni bilo najdene",
+  "NO_COLLECTION_TITLE": "Prazna kolekcija",
+  "NO_DOWNLOAD_UPDATE": "Aplikacija je že posodobljena.",
+  "NO_INTERNET_SUBTITLE": "Preveri internetno povezavo",
+  "NO_INTERNET_TITLE": "Ni interneta",
+  "OK": "OK",
+  "OPTIONS": "Opcije",
+  "PAUSE": "Ustavi",
+  "PLAY": "Predvajaj",
+  "PLAYLIST": "Playlists",
+  "PLAYLISTS_CREATE": "Ustvari seznam predvajanja",
+  "PLAYLISTS_SUBHEADER": "Tvoji seznami predvajanja",
+  "PLAYLISTS_TEXT_FIELD_HINT": "Ime za tvoj seznam predvajanja",
+  "PLAYLISTS_TEXT_FIELD_LABEL": "Ime Seznama predvajanja",
+  "PLAYLIST_ADD_DIALOG_BODY": "Izberi pesem za seznam predvajanja",
+  "PLAYLIST_ADD_DIALOG_TITLE": "Dodaj na seznam predvajanja",
+  "PLAYLIST_TRACKS_SUBHEADER": "Tukaj so pesmi iz seznama predvajanja",
+  "PLAY_NOW": "Predvajaj zdaj",
   "RECOMMENDATIONS": "Priporočeno",
-  "YOUTUBE_WELCOME": "Išči za glasbo ali pa vpiši povezavo",
-  "YOUTUBE_NO_RESULTS": "Iskali smo širno, a tega nismo mogli najti.",
-  "YOUTUBE_INTERNET_ERROR": "Predvajajmo lokalno glasbo, medtem ko ni internetne povezave.",
+  "REFRESH": "OSVEŽI",
+  "REMOVE": "ODSTRANI",
   "RETRIEVING_INFO": "Pridobivanje informacij o pesmi",
   "RETRIEVING_LINK": "Pridobivanje toka pesmi",
+  "SAVE_TO_DOWNLOADS": "Shrani med prenose",
+  "SEARCH": "Išči",
+  "SEARCH_COLLECTION": "Preišči kolekcijo",
+  "SEARCH_HISTORY_SUBHEADER": "Tvoja nedavna iskanja",
+  "SEARCH_NO_RECENT_SEARCHES": "Tvoji nedavni prenosi so tukaj",
+  "SEARCH_RESULT_LOADER_LABEL": "Pridobivanje tvoje glasbe...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SELECTED_DIRECTORIES": "Izbrani direktoriji:",
+  "SELECTED_DIRECTORY": "Izbran direktorij:",
+  "SETTING": "Nastavitve",
+  "SETTING_ACCENT_COLOR_AUTOMATIC": "Avtomatska barvna shema",
+  "SETTING_ACCENT_COLOR_SUBTITLE": "Zamenjaj odtenek na aplikaciji",
+  "SETTING_ACCENT_COLOR_TITLE": "Odtenek",
+  "SETTING_APP_VERSION_INSTALLED": "Nameščena verzija",
+  "SETTING_APP_VERSION_LATEST": "Najnovejša verzija",
+  "SETTING_APP_VERSION_SUBTITLE": "Informacija o trenutni verziji.",
+  "SETTING_APP_VERSION_TITLE": "Verzija aplikacije",
+  "SETTING_GITHUB": "GITHUB",
+  "SETTING_INDEXING_DONE": "Tvoja kolekcija je indeksirana",
+  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indeksiranih NUMBER_STRING od TOTAL_STRING pesmi...",
+  "SETTING_INDEXING_SUBTITLE": "Znova indeksiraj kolekcijo",
+  "SETTING_INDEXING_TITLE": "Indeksiraj",
+  "SETTING_INDEXING_WARNING": "Ne prekinjaj procesa.",
+  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Najlepša hvala za podporo pri aplikaciji",
+  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Prevajalci projekta",
+  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Ali želiš ponovno zagnati aplikacijo zdaj?",
+  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Ponovni zagon aplikacije je potreben",
+  "SETTING_LANGUAGE_SUBTITLE": "Spremenite način prikaza aplikacije",
+  "SETTING_LANGUAGE_TITLE": "Jezik",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Nastavi platformo na TargetPlatform.iOS",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Vključi iOS uporabniški vmesnik",
+  "SETTING_MISCELLANEOUS_SUBTITLE": "Ostale nastavitve aplikacije",
+  "SETTING_MISCELLANEOUS_TITLE": "Ostalo",
+  "SETTING_STARGAZERS_SUBTITLE": "Najlepša hvala za vašo podporo",
+  "SETTING_STARGAZERS_TITLE": "Všečkerji projekta",
+  "SETTING_STAR_GITHUB": "VŠEČKAJ PROJEKT",
+  "SETTING_THEME_SUBTITLE": "Menjaj med temnim in svetlim načinom",
+  "SETTING_THEME_TITLE": "Način",
+  "SHARE": "Deli",
   "STARTING_PLAYBACK": "Začenjam predvajanje",
-  "BUFFERING": "Bufferanje...",
+  "SWITCH_THEME": "Zamenjaj temo",
+  "THEME_MODE_DARK": "Temni",
+  "THEME_MODE_LIGHT": "Svetli",
+  "THEME_MODE_SYSTEM": "System",
+  "TRACK": "Pesmi",
+  "TRACKS_FROM_ARTIST": "Pesmi od tega ustvarjalca.",
+  "TRACK_SINGLE": "Pesem",
+  "TRANSFERS": "Prenosi",
   "WARNING": "Opozorilo",
-  "LAST_COLLECTION_DIRECTORY_REMOVED": "Vsaj en direktorij mora ostati v tvoji zbirki.",
-  "ENABLE_125_SCALING": "Vključi 125% povečavo.",
   "YEAR": "Year",
-  "KNOW_MORE": "KNOW MORE"
+  "YES": "JA",
+  "YOUTUBE": "YouTube",
+  "YOUTUBE_INTERNET_ERROR": "Predvajajmo lokalno glasbo, medtem ko ni internetne povezave.",
+  "YOUTUBE_NO_RESULTS": "Iskali smo širno, a tega nismo mogli najti.",
+  "YOUTUBE_WELCOME": "Išči za glasbo ali pa vpiši povezavo"
 }
