--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -1,136 +1,137 @@
 {
-  "INTERNET_ERROR": "Granska din internetanslutning.",
-  "COLLECTION": "Samling",
-  "NOW_PLAYING": "Spelas Nu",
-  "SETTING": "Inställningar",
-  "OK": "OKEJ",
-  "YES": "JA",
-  "NO": "NEJ",
-  "ALBUM": "Album",
-  "TRACK": "Låtar",
-  "ARTIST": "Artister",
-  "THEME_MODE_LIGHT": "Ljus",
-  "THEME_MODE_DARK": "Mörk",
-  "THEME_MODE_SYSTEM": "Följ systemtema",
-  "OPTIONS": "Val",
-  "DELETE_TRACK": "Radera låt",
-  "SEARCH_HISTORY_SUBHEADER": "Dina senaste sökningar",
-  "SEARCH_RESULT_LOADER_LABEL": "Hämtar din musik...",
-  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Sök & spara musik för att se här.\nSnurra på uppdatera för att se nya saker.",
-  "COLLECTION_TOP_SUBHEADER_ALBUM": "Senaste album",
-  "COLLECTION_OTHER_SUBHEADER_ALBUM": "Fler album",
-  "COLLECTION_TOP_SUBHEADER_TRACK": "Senaste låt",
-  "COLLECTION_OTHER_SUBHEADER_TRACK": "Fler låtar",
-  "COLLECTION_TOP_SUBHEADER_ARTIST": "Senaste artist",
-  "COLLECTION_OTHER_SUBHEADER_ARTIST": "Fler artister",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Låtar från albumet",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Lite information om albumet",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Är du säker?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Vill du avlägsna detta album sparat på din enhet?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Är du säker?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Vill du avlägsna denna låt sparad på din enhet?",
-  "NOW_PLAYING_NEXT_TRACK": "NÄSTA",
-  "NOW_PLAYING_PREVIOUS_TRACK": "FÖREGÅENDE",
-  "NOW_PLAYING_NOT_PLAYING_TITLE": "Inget spelas upp",
-  "SETTING_GITHUB": "GITHUB",
-  "SETTING_STAR_GITHUB": "STJÄRNMÄRK PROJEKTET",
-  "SETTING_STARGAZERS_TITLE": "Projekt Stargazers",
-  "SETTING_STARGAZERS_SUBTITLE": "Tack så mycket för ditt stöd",
-  "SETTING_LANGUAGE_TITLE": "Språk",
-  "SETTING_LANGUAGE_SUBTITLE": "Byt språk på applikationen",
-  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Applikationsomstart krävs",
-  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Vill du starta om applikationen nu?",
-  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Översättare",
-  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Tack så mycket för ditt stöd för applikationen.",
-  "SETTING_ACCENT_COLOR_TITLE": "Accentfärg",
-  "SETTING_ACCENT_COLOR_SUBTITLE": "Ändra applikationens accentfärg",
-  "SETTING_THEME_TITLE": "Tema",
-  "SETTING_THEME_SUBTITLE": "Ändra applikationen till ljust eller mörkt läge",
-  "ABOUT_TITLE": "Om",
   "ABOUT_SUBTITLE": "Information om applikationen & dess utvecklare",
-  "NO_DOWNLOAD_UPDATE": "Din applikation är redan uppdaterad",
-  "DOWNLOAD_UPDATE": "LADDA NER UPPDATERING",
-  "SETTING_APP_VERSION_TITLE": "Version",
-  "SETTING_APP_VERSION_SUBTITLE": "Information om nuvarande version av applikationen",
-  "SETTING_APP_VERSION_INSTALLED": "Installerad version",
-  "SETTING_APP_VERSION_LATEST": "Senaste versionen",
-  "MENU": "Meny",
-  "SEARCH_COLLECTION": "Sök samling",
-  "SWITCH_THEME": "Byt tema",
-  "PLAY": "Spela",
-  "PAUSE": "Paus",
-  "DELETE": "Radera",
-  "SHARE": "Dela",
-  "ADD_TO_PLAYLIST": "Lägg till spellista",
-  "SAVE_TO_DOWNLOADS": "Spara i nerladdningar",
-  "COLLECTION_SEARCH_WELCOME": "Skriv något för att söka i din samling",
-  "COLLECTION_SEARCH_NO_RESULTS": "Inget sådant fanns i din samling",
-  "PLAYLISTS": "Spellistor",
-  "PLAYLIST": "Spellista",
-  "PLAYLISTS_SUBHEADER": "Dina spellistor",
-  "PLAYLISTS_CREATE": "Skapa ny spellista",
-  "PLAYLISTS_TEXT_FIELD_LABEL": "Spellistans namn",
-  "PLAYLISTS_TEXT_FIELD_HINT": "Namn för din nya spellista",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Är du säker?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Vill du radera denna spellista?",
-  "CANCEL": "AVBRYT",
-  "PLAYLIST_ADD_DIALOG_TITLE": "Lägg till spellista",
-  "PLAYLIST_ADD_DIALOG_BODY": "Välj en spellista för att lägga till denna låt",
-  "PLAYLIST_TRACKS_SUBHEADER": "Här är låtarna i denna spellista",
-  "TRANSFERS": "Överföringar",
-  "SETTING_INDEXING_TITLE": "Indexering",
-  "SETTING_INDEXING_SUBTITLE": "Omindexera din musiksamling",
-  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexerat NUMBER_STRING av TOTAL_STRING låtar...",
-  "SETTING_INDEXING_DONE": "Indexerad",
-  "SETTING_INDEXING_WARNING": "Avbryt inte processen.",
-  "REFRESH": "UPPDATERA",
-  "SEARCH_NO_RECENT_SEARCHES": "Dina senaste sökningar visas här",
-  "NO_INTERNET_TITLE": "Inget internet",
-  "NO_INTERNET_SUBTITLE": "Granska din anslutning.",
-  "NO_COLLECTION_TITLE": "Tom samling",
-  "NO_COLLECTION_SUBTITLE": "Ingen musik hittades.\nÄndra sökväg till musik i inställningarna.",
-  "DISCORD": "DISCORD SERVER",
-  "EXIT_TITLE": "Avsluta",
-  "EXIT_SUBTITLE": "Vill du avsluta Harmonoid?",
-  "A_TO_Z": "A till Ö",
-  "DATE_ADDED": "Datum tillagd",
-  "SETTING_ACCENT_COLOR_AUTOMATIC": "Automatisk accentfärg",
-  "SETTING_MISCELLANEOUS_TITLE": "Diverse",
-  "SETTING_MISCELLANEOUS_SUBTITLE": "Andra inställningar i applikationen",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Aktivera iOS mekanik",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Ange plattform till TargetPlatform.iOS",
-  "SELECTED_DIRECTORY": "Vald katalog:",
-  "LYRICS": "Låttexter",
-  "NOTIFICATION_LYRICS_TITLE": "Avisering låttexter",
-  "NOTIFICATION_LYRICS_SUBTITLE": "Visa låttexter i en avisering.",
-  "LYRICS_RETRIEVING": "Hämtar låttexter...",
-  "LYRICS_NOT_FOUND": "Låttexter inte funna.",
-  "COMING_UP": "Coming Up",
-  "ALBUM_SINGLE": "Album",
-  "TRACK_SINGLE": "Låt",
-  "ARTIST_SINGLE": "Artist",
-  "SEARCH": "Sök",
-  "ALBUMS_FROM_ARTIST": "Album av denna artist.",
-  "TRACKS_FROM_ARTIST": "Låtar av denna artist.",
-  "REMOVE": "TA BORT",
+  "ABOUT_TITLE": "Om",
   "ADD_NEW_FOLDER": "LÄGG TILL NY MAPP",
   "ADD_TO_NOW_PLAYING": "Lägg till i spelas nu",
-  "PLAY_NOW": "Spela nu",
-  "COLLECTION_SEARCH_LABEL": "Leta i din samling",
-  "SELECTED_DIRECTORIES": "Valda kataloger:",
-  "ENABLE_ACRYLIC_BLUR": "Aktivera Windows akryl suddighet.",
+  "ADD_TO_PLAYLIST": "Lägg till spellista",
+  "ALBUM": "Album",
+  "ALBUMS_FROM_ARTIST": "Album av denna artist.",
+  "ALBUM_SINGLE": "Album",
+  "ARTIST": "Artister",
+  "ARTIST_SINGLE": "Artist",
+  "A_TO_Z": "A till Ö",
+  "BUFFERING": "Buffrar...",
+  "CANCEL": "AVBRYT",
+  "COLLECTION": "Samling",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Vill du avlägsna detta album sparat på din enhet?",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Är du säker?",
+  "COLLECTION_ALBUM_INFO_SUBHEADER": "Lite information om albumet",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Vill du radera denna spellista?",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Är du säker?",
+  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Låtar från albumet",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Vill du avlägsna denna låt sparad på din enhet?",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Är du säker?",
   "COLLECTION_INDEXING_LABEL": "Din lokala musik synkas.\nInte en god ide' att stänga applikationen.",
+  "COLLECTION_OTHER_SUBHEADER_ALBUM": "Fler album",
+  "COLLECTION_OTHER_SUBHEADER_ARTIST": "Fler artister",
+  "COLLECTION_OTHER_SUBHEADER_TRACK": "Fler låtar",
+  "COLLECTION_SEARCH_LABEL": "Leta i din samling",
+  "COLLECTION_SEARCH_NO_RESULTS": "Inget sådant fanns i din samling",
+  "COLLECTION_SEARCH_WELCOME": "Skriv något för att söka i din samling",
+  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Sök & spara musik för att se här.\nSnurra på uppdatera för att se nya saker.",
+  "COLLECTION_TOP_SUBHEADER_ALBUM": "Senaste album",
+  "COLLECTION_TOP_SUBHEADER_ARTIST": "Senaste artist",
+  "COLLECTION_TOP_SUBHEADER_TRACK": "Senaste låt",
+  "COMING_UP": "Coming Up",
+  "DATE_ADDED": "Datum tillagd",
+  "DELETE": "Radera",
+  "DELETE_TRACK": "Radera låt",
+  "DISCORD": "DISCORD SERVER",
+  "DOWNLOAD_UPDATE": "LADDA NER UPPDATERING",
+  "ENABLE_125_SCALING": "Enable 125% scaling.",
+  "ENABLE_ACRYLIC_BLUR": "Aktivera Windows akryl suddighet.",
+  "EXIT_SUBTITLE": "Vill du avsluta Harmonoid?",
+  "EXIT_TITLE": "Avsluta",
+  "INTERNET_ERROR": "Granska din internetanslutning.",
+  "KNOW_MORE": "KNOW MORE",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
+  "LYRICS": "Låttexter",
+  "LYRICS_NOT_FOUND": "Låttexter inte funna.",
+  "LYRICS_RETRIEVING": "Hämtar låttexter...",
+  "MENU": "Meny",
+  "NO": "NEJ",
+  "NOTIFICATION_LYRICS_SUBTITLE": "Visa låttexter i en avisering.",
+  "NOTIFICATION_LYRICS_TITLE": "Avisering låttexter",
+  "NOW_PLAYING": "Spelas Nu",
+  "NOW_PLAYING_NEXT_TRACK": "NÄSTA",
+  "NOW_PLAYING_NOT_PLAYING_TITLE": "Inget spelas upp",
+  "NOW_PLAYING_PREVIOUS_TRACK": "FÖREGÅENDE",
+  "NO_COLLECTION_SUBTITLE": "Ingen musik hittades.\nÄndra sökväg till musik i inställningarna.",
+  "NO_COLLECTION_TITLE": "Tom samling",
+  "NO_DOWNLOAD_UPDATE": "Din applikation är redan uppdaterad",
+  "NO_INTERNET_SUBTITLE": "Granska din anslutning.",
+  "NO_INTERNET_TITLE": "Inget internet",
+  "OK": "OKEJ",
+  "OPTIONS": "Val",
+  "PAUSE": "Paus",
+  "PLAY": "Spela",
+  "PLAYLIST": "Playlists",
+  "PLAYLISTS_CREATE": "Skapa ny spellista",
+  "PLAYLISTS_SUBHEADER": "Dina spellistor",
+  "PLAYLISTS_TEXT_FIELD_HINT": "Namn för din nya spellista",
+  "PLAYLISTS_TEXT_FIELD_LABEL": "Spellistans namn",
+  "PLAYLIST_ADD_DIALOG_BODY": "Välj en spellista för att lägga till denna låt",
+  "PLAYLIST_ADD_DIALOG_TITLE": "Lägg till spellista",
+  "PLAYLIST_TRACKS_SUBHEADER": "Här är låtarna i denna spellista",
+  "PLAY_NOW": "Spela nu",
   "RECOMMENDATIONS": "Rekommenderat",
-  "YOUTUBE_WELCOME": "Sök musik eller ange länk",
-  "YOUTUBE_NO_RESULTS": "Inget sådant hittades.",
-  "YOUTUBE_INTERNET_ERROR": "Låt oss spela din lokala musik, medan du återgår online.",
+  "REFRESH": "UPPDATERA",
+  "REMOVE": "TA BORT",
   "RETRIEVING_INFO": "Hämtar info",
   "RETRIEVING_LINK": "Hämtar stream",
+  "SAVE_TO_DOWNLOADS": "Spara i nerladdningar",
+  "SEARCH": "Sök",
+  "SEARCH_COLLECTION": "Sök samling",
+  "SEARCH_HISTORY_SUBHEADER": "Dina senaste sökningar",
+  "SEARCH_NO_RECENT_SEARCHES": "Dina senaste sökningar visas här",
+  "SEARCH_RESULT_LOADER_LABEL": "Hämtar din musik...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SELECTED_DIRECTORIES": "Valda kataloger:",
+  "SELECTED_DIRECTORY": "Vald katalog:",
+  "SETTING": "Inställningar",
+  "SETTING_ACCENT_COLOR_AUTOMATIC": "Automatisk accentfärg",
+  "SETTING_ACCENT_COLOR_SUBTITLE": "Ändra applikationens accentfärg",
+  "SETTING_ACCENT_COLOR_TITLE": "Accentfärg",
+  "SETTING_APP_VERSION_INSTALLED": "Installerad version",
+  "SETTING_APP_VERSION_LATEST": "Senaste versionen",
+  "SETTING_APP_VERSION_SUBTITLE": "Information om nuvarande version av applikationen",
+  "SETTING_APP_VERSION_TITLE": "Version",
+  "SETTING_GITHUB": "GITHUB",
+  "SETTING_INDEXING_DONE": "Indexerad",
+  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexerat NUMBER_STRING av TOTAL_STRING låtar...",
+  "SETTING_INDEXING_SUBTITLE": "Omindexera din musiksamling",
+  "SETTING_INDEXING_TITLE": "Indexering",
+  "SETTING_INDEXING_WARNING": "Avbryt inte processen.",
+  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Tack så mycket för ditt stöd för applikationen.",
+  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Översättare",
+  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Vill du starta om applikationen nu?",
+  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Applikationsomstart krävs",
+  "SETTING_LANGUAGE_SUBTITLE": "Byt språk på applikationen",
+  "SETTING_LANGUAGE_TITLE": "Språk",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Ange plattform till TargetPlatform.iOS",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Aktivera iOS mekanik",
+  "SETTING_MISCELLANEOUS_SUBTITLE": "Andra inställningar i applikationen",
+  "SETTING_MISCELLANEOUS_TITLE": "Diverse",
+  "SETTING_STARGAZERS_SUBTITLE": "Tack så mycket för ditt stöd",
+  "SETTING_STARGAZERS_TITLE": "Projekt Stargazers",
+  "SETTING_STAR_GITHUB": "STJÄRNMÄRK PROJEKTET",
+  "SETTING_THEME_SUBTITLE": "Ändra applikationen till ljust eller mörkt läge",
+  "SETTING_THEME_TITLE": "Tema",
+  "SHARE": "Dela",
   "STARTING_PLAYBACK": "Startar uppspelning",
-  "BUFFERING": "Buffrar...",
+  "SWITCH_THEME": "Byt tema",
+  "THEME_MODE_DARK": "Mörk",
+  "THEME_MODE_LIGHT": "Ljus",
+  "THEME_MODE_SYSTEM": "System",
+  "TRACK": "Låtar",
+  "TRACKS_FROM_ARTIST": "Låtar av denna artist.",
+  "TRACK_SINGLE": "Låt",
+  "TRANSFERS": "Överföringar",
   "WARNING": "Warning",
-  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
-  "ENABLE_125_SCALING": "Enable 125% scaling.",
   "YEAR": "Year",
-  "KNOW_MORE": "KNOW MORE"
+  "YES": "JA",
+  "YOUTUBE": "YouTube",
+  "YOUTUBE_INTERNET_ERROR": "Låt oss spela din lokala musik, medan du återgår online.",
+  "YOUTUBE_NO_RESULTS": "Inget sådant hittades.",
+  "YOUTUBE_WELCOME": "Sök musik eller ange länk"
 }
