--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -1,137 +1,137 @@
 {
-  "INTERNET_ERROR": "检查您的网络连接。",
-  "COLLECTION": "收藏",
-  "NOW_PLAYING": "正在播放",
-  "SETTING": "设置",
-  "OK": "好的",
-  "YES": "是",
-  "NO": "否",
-  "ALBUM": "专辑",
-  "TRACK": "歌曲",
-  "ARTIST": "艺术家",
-  "THEME_MODE_LIGHT": "明亮",
-  "THEME_MODE_DARK": "暗色",
-  "OPTIONS": "选项",
-  "DELETE_TRACK": "删除歌曲",
-  "SEARCH_HISTORY_SUBHEADER": "您最近搜索记录",
-  "SEARCH_RESULT_LOADER_LABEL": "获取您的音乐中...",
-  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "搜索后保存的音乐将展示在这里。\n刷新查看最新。",
-  "COLLECTION_TOP_SUBHEADER_ALBUM": "最新专辑",
-  "COLLECTION_OTHER_SUBHEADER_ALBUM": "更多专辑",
-  "COLLECTION_TOP_SUBHEADER_TRACK": "最新歌曲",
-  "COLLECTION_OTHER_SUBHEADER_TRACK": "更多歌曲",
-  "COLLECTION_TOP_SUBHEADER_ARTIST": "最新艺术家",
-  "COLLECTION_OTHER_SUBHEADER_ARTIST": "更多艺术家",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "专辑中歌曲",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "关于专辑",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "您确定吗?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "您确定删除已经保存在您设备上的专辑吗？",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "您确定吗?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "您确定删除已经保存在您设备上的歌曲吗?",
-  "NOW_PLAYING_NEXT_TRACK": "下一首",
-  "NOW_PLAYING_PREVIOUS_TRACK": "上一首",
-  "NOW_PLAYING_NOT_PLAYING_TITLE": "当前无播放",
-  "SETTING_GITHUB": "GITHUB",
-  "SETTING_STAR_GITHUB": "收藏项目",
-  "SETTING_STARGAZERS_TITLE": "项目 Stargazers",
-  "SETTING_STARGAZERS_SUBTITLE": "感谢您的支持",
-  "SETTING_LANGUAGE_TITLE": "语言",
-  "SETTING_LANGUAGE_SUBTITLE": "修改应用语言",
-  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "需要重启应用",
-  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "您想要立即重启应用吗?",
-  "ABOUT_TITLE": "关于",
   "ABOUT_SUBTITLE": "应用及开发者信息",
-  "SETTING_LANGUAGE_PROVIDERS_TITLE": "翻译贡献者",
-  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "特别感谢您们对应用的支持。",
-  "SETTING_ACCENT_COLOR_TITLE": "主题色",
-  "SETTING_ACCENT_COLOR_SUBTITLE": "切换应用的主题色",
-  "SETTING_THEME_TITLE": "主题",
-  "SETTING_THEME_SUBTITLE": "切换应用至明亮或暗色主题",
-  "NO_DOWNLOAD_UPDATE": "您的应用已是最新版本",
-  "DOWNLOAD_UPDATE": "下载更新",
-  "SETTING_APP_VERSION_TITLE": "版本",
-  "SETTING_APP_VERSION_SUBTITLE": "应用最新版本信息",
-  "SETTING_APP_VERSION_INSTALLED": "安装版本",
-  "SETTING_APP_VERSION_LATEST": "最新版本",
-  "MENU": "菜单",
-  "SEARCH_COLLECTION": "搜索收藏夹",
-  "SWITCH_THEME": "切换主题",
-  "PLAY": "播放",
-  "PAUSE": "暂停",
-  "DELETE": "删除",
-  "SHARE": "分享",
-  "ADD_TO_PLAYLIST": "添加到播放列表",
-  "SAVE_TO_DOWNLOADS": "保存到下载列表",
-  "COLLECTION_SEARCH_WELCOME": "从您的收藏中搜索",
-  "COLLECTION_SEARCH_NO_RESULTS": "在您的收藏夹中未搜到结果",
-  "PLAYLIST": "播放列表",
-  "PLAYLISTS": "播放列表",
-  "PLAYLISTS_SUBHEADER": "您的播放列表",
-  "PLAYLISTS_CREATE": "创建一个新播放列表",
-  "PLAYLISTS_TEXT_FIELD_LABEL": "播放列表名",
-  "PLAYLISTS_TEXT_FIELD_HINT": "请输入播放列表名",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "您确定吗?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "您确定删除该播放列表吗?",
-  "CANCEL": "取消",
-  "PLAYLIST_ADD_DIALOG_TITLE": "添加到播放列表",
-  "PLAYLIST_ADD_DIALOG_BODY": "选择播放列表添加歌曲",
-  "PLAYLIST_TRACKS_SUBHEADER": "这里展示的是播放列表中的歌曲",
-  "TRANSFERS": "传输",
-  "THEME_MODE_SYSTEM": "跟随系统主题",
-  "SETTING_INDEXING_TITLE": "收藏",
-  "SETTING_INDEXING_SUBTITLE": "选择目录搜索音乐或者重新索引",
-  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "TOTAL_STRING 首歌曲中已完成 NUMBER_STRING 首...",
-  "SETTING_INDEXING_DONE": "已添加",
-  "SETTING_INDEXING_WARNING": "请不要中断操作",
-  "REFRESH": "刷新",
-  "SEARCH_NO_RECENT_SEARCHES": "您最近的搜索记录显示在这里",
-  "NO_INTERNET_TITLE": "无网络连接",
-  "NO_INTERNET_SUBTITLE": "检查您的网络",
-  "NO_COLLECTION_TITLE": "空收藏夹",
-  "NO_COLLECTION_SUBTITLE": "没有找到音乐。\n您可以从设置中修改发现音乐的目录。",
-  "DISCORD": "DISCORD 服务器",
-  "EXIT_TITLE": "退出",
-  "EXIT_SUBTITLE": "您确定退出 Harmonoid 吗?",
-  "A_TO_Z": "A 到 Z",
-  "DATE_ADDED": "添加日期",
-  "SETTING_ACCENT_COLOR_AUTOMATIC": "自动主题",
-  "SETTING_MISCELLANEOUS_TITLE": "其他设置",
-  "SETTING_MISCELLANEOUS_SUBTITLE": "应用其他设置",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "开启 iOS mechanics",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "设置平台为 TargetPlatform.iOS",
-  "SELECTED_DIRECTORY": "已选择目录：",
-  "LYRICS": "歌词",
-  "NOTIFICATION_LYRICS_TITLE": "通知栏歌词",
-  "NOTIFICATION_LYRICS_SUBTITLE": "在通知栏显示歌词。",
-  "LYRICS_RETRIEVING": "获取歌词中...",
-  "LYRICS_NOT_FOUND": "歌词未找到。",
-  "COMING_UP": "开发中",
-  "ALBUM_SINGLE": "专辑",
-  "TRACK_SINGLE": "歌曲",
-  "ARTIST_SINGLE": "艺术家",
-  "ALBUMS_FROM_ARTIST": "来自该艺术家的专辑。",
-  "TRACKS_FROM_ARTIST": "来自该艺术家的歌曲。",
-  "REMOVE": "移除",
+  "ABOUT_TITLE": "关于",
   "ADD_NEW_FOLDER": "添加新目录",
   "ADD_TO_NOW_PLAYING": "添加到正在播放列表",
-  "PLAY_NOW": "现在播放",
-  "COLLECTION_SEARCH_LABEL": "查找您的目录中",
-  "SELECTED_DIRECTORIES": "已选择目录：",
-  "ENABLE_ACRYLIC_BLUR": "开启 Windows 歌词模糊。",
-  "SEARCH": "搜索",
+  "ADD_TO_PLAYLIST": "添加到播放列表",
+  "ALBUM": "专辑",
+  "ALBUMS_FROM_ARTIST": "来自该艺术家的专辑。",
+  "ALBUM_SINGLE": "专辑",
+  "ARTIST": "艺术家",
+  "ARTIST_SINGLE": "艺术家",
+  "A_TO_Z": "A 到 Z",
+  "BUFFERING": "缓冲中...",
+  "CANCEL": "取消",
+  "COLLECTION": "收藏",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "您确定删除已经保存在您设备上的专辑吗？",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "您确定吗?",
+  "COLLECTION_ALBUM_INFO_SUBHEADER": "关于专辑",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "您确定删除该播放列表吗?",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "您确定吗?",
+  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "专辑中歌曲",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "您确定删除已经保存在您设备上的歌曲吗?",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "您确定吗?",
   "COLLECTION_INDEXING_LABEL": "您本地的音乐同步中。\n现在请不要关闭应用。",
+  "COLLECTION_OTHER_SUBHEADER_ALBUM": "更多专辑",
+  "COLLECTION_OTHER_SUBHEADER_ARTIST": "更多艺术家",
+  "COLLECTION_OTHER_SUBHEADER_TRACK": "更多歌曲",
+  "COLLECTION_SEARCH_LABEL": "查找您的目录中",
+  "COLLECTION_SEARCH_NO_RESULTS": "在您的收藏夹中未搜到结果",
+  "COLLECTION_SEARCH_WELCOME": "从您的收藏中搜索",
+  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "搜索后保存的音乐将展示在这里。\n刷新查看最新。",
+  "COLLECTION_TOP_SUBHEADER_ALBUM": "最新专辑",
+  "COLLECTION_TOP_SUBHEADER_ARTIST": "最新艺术家",
+  "COLLECTION_TOP_SUBHEADER_TRACK": "最新歌曲",
+  "COMING_UP": "开发中",
+  "DATE_ADDED": "添加日期",
+  "DELETE": "删除",
+  "DELETE_TRACK": "删除歌曲",
+  "DISCORD": "DISCORD 服务器",
+  "DOWNLOAD_UPDATE": "下载更新",
+  "ENABLE_125_SCALING": "开启 125% 缩放。",
+  "ENABLE_ACRYLIC_BLUR": "开启 Windows 歌词模糊。",
+  "EXIT_SUBTITLE": "您确定退出 Harmonoid 吗?",
+  "EXIT_TITLE": "退出",
+  "INTERNET_ERROR": "检查您的网络连接。",
+  "KNOW_MORE": "KNOW MORE",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "您的收藏中需要只是包括一个目录。",
+  "LYRICS": "歌词",
+  "LYRICS_NOT_FOUND": "歌词未找到。",
+  "LYRICS_RETRIEVING": "获取歌词中...",
+  "MENU": "菜单",
+  "NO": "否",
+  "NOTIFICATION_LYRICS_SUBTITLE": "在通知栏显示歌词。",
+  "NOTIFICATION_LYRICS_TITLE": "通知栏歌词",
+  "NOW_PLAYING": "正在播放",
+  "NOW_PLAYING_NEXT_TRACK": "下一首",
+  "NOW_PLAYING_NOT_PLAYING_TITLE": "当前无播放",
+  "NOW_PLAYING_PREVIOUS_TRACK": "上一首",
+  "NO_COLLECTION_SUBTITLE": "没有找到音乐。\n您可以从设置中修改发现音乐的目录。",
+  "NO_COLLECTION_TITLE": "空收藏夹",
+  "NO_DOWNLOAD_UPDATE": "您的应用已是最新版本",
+  "NO_INTERNET_SUBTITLE": "检查您的网络",
+  "NO_INTERNET_TITLE": "无网络连接",
+  "OK": "好的",
+  "OPTIONS": "选项",
+  "PAUSE": "暂停",
+  "PLAY": "播放",
+  "PLAYLIST": "Playlists",
+  "PLAYLISTS_CREATE": "创建一个新播放列表",
+  "PLAYLISTS_SUBHEADER": "您的播放列表",
+  "PLAYLISTS_TEXT_FIELD_HINT": "请输入播放列表名",
+  "PLAYLISTS_TEXT_FIELD_LABEL": "播放列表名",
+  "PLAYLIST_ADD_DIALOG_BODY": "选择播放列表添加歌曲",
+  "PLAYLIST_ADD_DIALOG_TITLE": "添加到播放列表",
+  "PLAYLIST_TRACKS_SUBHEADER": "这里展示的是播放列表中的歌曲",
+  "PLAY_NOW": "现在播放",
   "RECOMMENDATIONS": "推荐",
-  "YOUTUBE_WELCOME": "搜索音乐或输入链接",
-  "YOUTUBE_NO_RESULTS": "未找到结果。",
-  "YOUTUBE_INTERNET_ERROR": "当前离线中，播放一些本地音乐吧。",
+  "REFRESH": "刷新",
+  "REMOVE": "移除",
   "RETRIEVING_INFO": "获取详情中",
   "RETRIEVING_LINK": "获取串流中",
+  "SAVE_TO_DOWNLOADS": "保存到下载列表",
+  "SEARCH": "搜索",
+  "SEARCH_COLLECTION": "搜索收藏夹",
+  "SEARCH_HISTORY_SUBHEADER": "您最近搜索记录",
+  "SEARCH_NO_RECENT_SEARCHES": "您最近的搜索记录显示在这里",
+  "SEARCH_RESULT_LOADER_LABEL": "获取您的音乐中...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SELECTED_DIRECTORIES": "已选择目录：",
+  "SELECTED_DIRECTORY": "已选择目录：",
+  "SETTING": "设置",
+  "SETTING_ACCENT_COLOR_AUTOMATIC": "自动主题",
+  "SETTING_ACCENT_COLOR_SUBTITLE": "切换应用的主题色",
+  "SETTING_ACCENT_COLOR_TITLE": "主题色",
+  "SETTING_APP_VERSION_INSTALLED": "安装版本",
+  "SETTING_APP_VERSION_LATEST": "最新版本",
+  "SETTING_APP_VERSION_SUBTITLE": "应用最新版本信息",
+  "SETTING_APP_VERSION_TITLE": "版本",
+  "SETTING_GITHUB": "GITHUB",
+  "SETTING_INDEXING_DONE": "已添加",
+  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "TOTAL_STRING 首歌曲中已完成 NUMBER_STRING 首...",
+  "SETTING_INDEXING_SUBTITLE": "选择目录搜索音乐或者重新索引",
+  "SETTING_INDEXING_TITLE": "收藏",
+  "SETTING_INDEXING_WARNING": "请不要中断操作",
+  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "特别感谢您们对应用的支持。",
+  "SETTING_LANGUAGE_PROVIDERS_TITLE": "翻译贡献者",
+  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "您想要立即重启应用吗?",
+  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "需要重启应用",
+  "SETTING_LANGUAGE_SUBTITLE": "修改应用语言",
+  "SETTING_LANGUAGE_TITLE": "语言",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "设置平台为 TargetPlatform.iOS",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "开启 iOS mechanics",
+  "SETTING_MISCELLANEOUS_SUBTITLE": "应用其他设置",
+  "SETTING_MISCELLANEOUS_TITLE": "其他设置",
+  "SETTING_STARGAZERS_SUBTITLE": "感谢您的支持",
+  "SETTING_STARGAZERS_TITLE": "项目 Stargazers",
+  "SETTING_STAR_GITHUB": "收藏项目",
+  "SETTING_THEME_SUBTITLE": "切换应用至明亮或暗色主题",
+  "SETTING_THEME_TITLE": "主题",
+  "SHARE": "分享",
   "STARTING_PLAYBACK": "开启播放中",
-  "BUFFERING": "缓冲中...",
+  "SWITCH_THEME": "切换主题",
+  "THEME_MODE_DARK": "暗色",
+  "THEME_MODE_LIGHT": "明亮",
+  "THEME_MODE_SYSTEM": "System",
+  "TRACK": "歌曲",
+  "TRACKS_FROM_ARTIST": "来自该艺术家的歌曲。",
+  "TRACK_SINGLE": "歌曲",
+  "TRANSFERS": "传输",
   "WARNING": "警告",
-  "LAST_COLLECTION_DIRECTORY_REMOVED": "您的收藏中需要只是包括一个目录。",
-  "ENABLE_125_SCALING": "开启 125% 缩放。",
-  "REPORT": "报告",
   "YEAR": "Year",
-  "KNOW_MORE": "KNOW MORE"
+  "YES": "是",
+  "YOUTUBE": "YouTube",
+  "YOUTUBE_INTERNET_ERROR": "当前离线中，播放一些本地音乐吧。",
+  "YOUTUBE_NO_RESULTS": "未找到结果。",
+  "YOUTUBE_WELCOME": "搜索音乐或输入链接"
 }
