--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -1,136 +1,137 @@
 {
-  "INTERNET_ERROR": "Überprüfen Sie Ihre Internetverbindung...",
-  "COLLECTION": "Sammlung",
-  "NOW_PLAYING": "Jetzt abspielen",
-  "SETTING": "Einstellungen",
-  "OK": "OKAY",
-  "YES": "JA",
-  "NO": "NEIN",
-  "ALBUM": "Alben",
-  "TRACK": "Songs",
-  "ARTIST": "Künstler",
-  "THEME_MODE_LIGHT": "Light",
-  "THEME_MODE_DARK": "Dark",
-  "THEME_MODE_SYSTEM": "Follow system theme",
-  "OPTIONS": "Optionen",
-  "DELETE_TRACK": "Song löschen",
-  "SEARCH_HISTORY_SUBHEADER": "Ihre letzten Suchen",
-  "SEARCH_RESULT_LOADER_LABEL": "Musik laden...",
-  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Suche & speichere etwas Musik, um sie hier zu sehen.\nDrehe den Aktualisierungsbutton, um neue Sachen zu sehen",
-  "COLLECTION_TOP_SUBHEADER_ALBUM": "Hier ist das letzte von Ihnen gespeicherte Album",
-  "COLLECTION_OTHER_SUBHEADER_ALBUM": "Hier sind Ihre anderen Alben",
-  "COLLECTION_TOP_SUBHEADER_TRACK": "Here is the latest track saved by you",
-  "COLLECTION_OTHER_SUBHEADER_TRACK": "Here are your other tracks",
-  "COLLECTION_TOP_SUBHEADER_ARTIST": "Here is the latest artist saved by you",
-  "COLLECTION_OTHER_SUBHEADER_ARTIST": "Here are the artists saved on your device.",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Hier sind die Songs, die Sie gespeichert haben",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Einige Einblicke in das Album",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Dieses Album löschen ?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Löschen - Sicher...?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Wollen Sie diesen Song löschen?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Möchten Sie diesen auf Ihrem Gerät gespeicherten Song entfernen?",
-  "NOW_PLAYING_NEXT_TRACK": "NÄCHSTER",
-  "NOW_PLAYING_PREVIOUS_TRACK": "VORHERIGER",
-  "NOW_PLAYING_NOT_PLAYING_TITLE": "Es wird aktuell nichts gespielt...",
-  "SETTING_GITHUB": "GITHUB",
-  "SETTING_STAR_GITHUB": "Projekt mit \"Star\" versehen (GitHub)",
-  "SETTING_STARGAZERS_TITLE": "Projekt \"Star\"-Geber (GitHub)",
-  "SETTING_STARGAZERS_SUBTITLE": "Vielen Dank für Ihre Unterstützung",
-  "SETTING_LANGUAGE_TITLE": "Sprachen",
-  "SETTING_LANGUAGE_SUBTITLE": "Ändern Sie die Spracheinstellungen der App.",
-  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "App restart required",
-  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Do you want to restart the app now?",
-  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Übersetzer",
-  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Vielen Dank für die Unterstützung!",
-  "SETTING_ACCENT_COLOR_TITLE": "Akzentfarbe",
-  "SETTING_ACCENT_COLOR_SUBTITLE": "Ändern der Akzentfarbe der App",
-  "SETTING_THEME_TITLE": "Theme",
-  "SETTING_THEME_SUBTITLE": "Ändern Sie die App im Light-Mode oder Dark-Mode",
-  "ABOUT_TITLE": "Über",
   "ABOUT_SUBTITLE": "Informationen über die App und deren Entwickler",
-  "NO_DOWNLOAD_UPDATE": "Ihre App ist bereits aktuell.",
-  "DOWNLOAD_UPDATE": "UPDATE DOWNLOADEN",
-  "SETTING_APP_VERSION_TITLE": "Version",
-  "SETTING_APP_VERSION_SUBTITLE": "Informationen über die aktuelle App-Version",
-  "SETTING_APP_VERSION_INSTALLED": "installierte Version",
-  "SETTING_APP_VERSION_LATEST": "letzte Version",
-  "MENU": "Menu",
-  "SEARCH_COLLECTION": "Search Collection",
-  "SWITCH_THEME": "Switch Theme",
-  "PLAY": "Play",
-  "PAUSE": "Pause",
-  "DELETE": "Delete",
-  "SHARE": "Share",
-  "ADD_TO_PLAYLIST": "Add to playlist",
-  "SAVE_TO_DOWNLOADS": "Save to downloads",
-  "COLLECTION_SEARCH_WELCOME": "Enter something to search in your collection",
-  "COLLECTION_SEARCH_NO_RESULTS": "Nothing like that could be found in your collection",
-  "PLAYLISTS": "Playlists",
-  "PLAYLIST": "Playlist",
-  "PLAYLISTS_SUBHEADER": "Playlists created by you",
-  "PLAYLISTS_CREATE": "Create a new playlist",
-  "PLAYLISTS_TEXT_FIELD_LABEL": "Playlist Name",
-  "PLAYLISTS_TEXT_FIELD_HINT": "Name for your new playlist",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Are you sure?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Do you want to remove this playlist saved on your device?",
-  "CANCEL": "CANCEL",
-  "PLAYLIST_ADD_DIALOG_TITLE": "Add to playlist",
-  "PLAYLIST_ADD_DIALOG_BODY": "Select a playlist to add this track",
-  "PLAYLIST_TRACKS_SUBHEADER": "Here are the tracks in this playlist",
-  "TRANSFERS": "Transfers",
-  "SETTING_INDEXING_TITLE": "Collection",
-  "SETTING_INDEXING_SUBTITLE": "Select folders to search for music or reindex",
-  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexed NUMBER_STRING of TOTAL_STRING tracks...",
-  "SETTING_INDEXING_DONE": "Indexed",
-  "SETTING_INDEXING_WARNING": "Do not interrupt the process.",
-  "REFRESH": "REFRESH",
-  "SEARCH_NO_RECENT_SEARCHES": "Your recent searches will show here",
-  "NO_INTERNET_TITLE": "No Internet",
-  "NO_INTERNET_SUBTITLE": "Check your connection.",
-  "NO_COLLECTION_TITLE": "Empty Collection",
-  "NO_COLLECTION_SUBTITLE": "No music found.",
-  "DISCORD": "DISCORD SERVER",
-  "EXIT_TITLE": "Exit",
-  "EXIT_SUBTITLE": "Do you want to exit Harmonoid?",
-  "A_TO_Z": "A to Z",
-  "DATE_ADDED": "Date Added",
-  "SETTING_ACCENT_COLOR_AUTOMATIC": "Automatic Accent",
-  "SETTING_MISCELLANEOUS_TITLE": "Miscellaneous",
-  "SETTING_MISCELLANEOUS_SUBTITLE": "Other settings in the app",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Enable iOS mechanics",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Set platform to TargetPlatform.iOS",
-  "SELECTED_DIRECTORY": "Selected directory:",
-  "LYRICS": "Lyrics",
-  "NOTIFICATION_LYRICS_TITLE": "Notification lyrics",
-  "NOTIFICATION_LYRICS_SUBTITLE": "Show lyrics in a notification.",
-  "LYRICS_RETRIEVING": "Retrieving lyrics...",
-  "LYRICS_NOT_FOUND": "Lyrics not found.",
-  "COMING_UP": "Coming Up",
-  "ALBUM_SINGLE": "Album",
-  "TRACK_SINGLE": "Track",
-  "ARTIST_SINGLE": "Artist",
-  "SEARCH": "Search",
-  "ALBUMS_FROM_ARTIST": "Albums from this artist.",
-  "TRACKS_FROM_ARTIST": "Tracks from this artist.",
-  "REMOVE": "REMOVE",
+  "ABOUT_TITLE": "Über",
   "ADD_NEW_FOLDER": "ADD NEW FOLDER",
   "ADD_TO_NOW_PLAYING": "Add to now playing",
-  "PLAY_NOW": "Play now",
-  "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
-  "SELECTED_DIRECTORIES": "Selected directories:",
-  "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
+  "ADD_TO_PLAYLIST": "Add to playlist",
+  "ALBUM": "Alben",
+  "ALBUMS_FROM_ARTIST": "Albums from this artist.",
+  "ALBUM_SINGLE": "Album",
+  "ARTIST": "Künstler",
+  "ARTIST_SINGLE": "Artist",
+  "A_TO_Z": "A to Z",
+  "BUFFERING": "Buffering...",
+  "CANCEL": "CANCEL",
+  "COLLECTION": "Sammlung",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Löschen - Sicher...?",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Dieses Album löschen ?",
+  "COLLECTION_ALBUM_INFO_SUBHEADER": "Einige Einblicke in das Album",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Do you want to remove this playlist saved on your device?",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Are you sure?",
+  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Hier sind die Songs, die Sie gespeichert haben",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Möchten Sie diesen auf Ihrem Gerät gespeicherten Song entfernen?",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Wollen Sie diesen Song löschen?",
   "COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
+  "COLLECTION_OTHER_SUBHEADER_ALBUM": "Hier sind Ihre anderen Alben",
+  "COLLECTION_OTHER_SUBHEADER_ARTIST": "Here are the artists saved on your device.",
+  "COLLECTION_OTHER_SUBHEADER_TRACK": "Here are your other tracks",
+  "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
+  "COLLECTION_SEARCH_NO_RESULTS": "Nothing like that could be found in your collection",
+  "COLLECTION_SEARCH_WELCOME": "Enter something to search in your collection",
+  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Suche & speichere etwas Musik, um sie hier zu sehen.\nDrehe den Aktualisierungsbutton, um neue Sachen zu sehen",
+  "COLLECTION_TOP_SUBHEADER_ALBUM": "Hier ist das letzte von Ihnen gespeicherte Album",
+  "COLLECTION_TOP_SUBHEADER_ARTIST": "Here is the latest artist saved by you",
+  "COLLECTION_TOP_SUBHEADER_TRACK": "Here is the latest track saved by you",
+  "COMING_UP": "Coming Up",
+  "DATE_ADDED": "Date Added",
+  "DELETE": "Delete",
+  "DELETE_TRACK": "Song löschen",
+  "DISCORD": "DISCORD SERVER",
+  "DOWNLOAD_UPDATE": "UPDATE DOWNLOADEN",
+  "ENABLE_125_SCALING": "Enable 125% scaling.",
+  "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
+  "EXIT_SUBTITLE": "Do you want to exit Harmonoid?",
+  "EXIT_TITLE": "Exit",
+  "INTERNET_ERROR": "Überprüfen Sie Ihre Internetverbindung...",
+  "KNOW_MORE": "KNOW MORE",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
+  "LYRICS": "Lyrics",
+  "LYRICS_NOT_FOUND": "Lyrics not found.",
+  "LYRICS_RETRIEVING": "Retrieving lyrics...",
+  "MENU": "Menu",
+  "NO": "NEIN",
+  "NOTIFICATION_LYRICS_SUBTITLE": "Show lyrics in a notification.",
+  "NOTIFICATION_LYRICS_TITLE": "Notification lyrics",
+  "NOW_PLAYING": "Jetzt abspielen",
+  "NOW_PLAYING_NEXT_TRACK": "NÄCHSTER",
+  "NOW_PLAYING_NOT_PLAYING_TITLE": "Es wird aktuell nichts gespielt...",
+  "NOW_PLAYING_PREVIOUS_TRACK": "VORHERIGER",
+  "NO_COLLECTION_SUBTITLE": "No music found.",
+  "NO_COLLECTION_TITLE": "Empty Collection",
+  "NO_DOWNLOAD_UPDATE": "Ihre App ist bereits aktuell.",
+  "NO_INTERNET_SUBTITLE": "Check your connection.",
+  "NO_INTERNET_TITLE": "No Internet",
+  "OK": "OKAY",
+  "OPTIONS": "Optionen",
+  "PAUSE": "Pause",
+  "PLAY": "Play",
+  "PLAYLIST": "Playlists",
+  "PLAYLISTS_CREATE": "Create a new playlist",
+  "PLAYLISTS_SUBHEADER": "Playlists created by you",
+  "PLAYLISTS_TEXT_FIELD_HINT": "Name for your new playlist",
+  "PLAYLISTS_TEXT_FIELD_LABEL": "Playlist Name",
+  "PLAYLIST_ADD_DIALOG_BODY": "Select a playlist to add this track",
+  "PLAYLIST_ADD_DIALOG_TITLE": "Add to playlist",
+  "PLAYLIST_TRACKS_SUBHEADER": "Here are the tracks in this playlist",
+  "PLAY_NOW": "Play now",
   "RECOMMENDATIONS": "Recommendations",
-  "YOUTUBE_WELCOME": "Search for music or give a link",
-  "YOUTUBE_NO_RESULTS": "Nothing like that could be found.",
-  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online.",
+  "REFRESH": "REFRESH",
+  "REMOVE": "REMOVE",
   "RETRIEVING_INFO": "Retrieving info",
   "RETRIEVING_LINK": "Retrieving stream",
+  "SAVE_TO_DOWNLOADS": "Save to downloads",
+  "SEARCH": "Search",
+  "SEARCH_COLLECTION": "Search Collection",
+  "SEARCH_HISTORY_SUBHEADER": "Ihre letzten Suchen",
+  "SEARCH_NO_RECENT_SEARCHES": "Your recent searches will show here",
+  "SEARCH_RESULT_LOADER_LABEL": "Musik laden...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SELECTED_DIRECTORIES": "Selected directories:",
+  "SELECTED_DIRECTORY": "Selected directory:",
+  "SETTING": "Einstellungen",
+  "SETTING_ACCENT_COLOR_AUTOMATIC": "Automatic Accent",
+  "SETTING_ACCENT_COLOR_SUBTITLE": "Ändern der Akzentfarbe der App",
+  "SETTING_ACCENT_COLOR_TITLE": "Akzentfarbe",
+  "SETTING_APP_VERSION_INSTALLED": "installierte Version",
+  "SETTING_APP_VERSION_LATEST": "letzte Version",
+  "SETTING_APP_VERSION_SUBTITLE": "Informationen über die aktuelle App-Version",
+  "SETTING_APP_VERSION_TITLE": "Version",
+  "SETTING_GITHUB": "GITHUB",
+  "SETTING_INDEXING_DONE": "Indexed",
+  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexed NUMBER_STRING of TOTAL_STRING tracks...",
+  "SETTING_INDEXING_SUBTITLE": "Select folders to search for music or reindex",
+  "SETTING_INDEXING_TITLE": "Collection",
+  "SETTING_INDEXING_WARNING": "Do not interrupt the process.",
+  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Vielen Dank für die Unterstützung!",
+  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Übersetzer",
+  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Do you want to restart the app now?",
+  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "App restart required",
+  "SETTING_LANGUAGE_SUBTITLE": "Ändern Sie die Spracheinstellungen der App.",
+  "SETTING_LANGUAGE_TITLE": "Sprachen",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Set platform to TargetPlatform.iOS",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Enable iOS mechanics",
+  "SETTING_MISCELLANEOUS_SUBTITLE": "Other settings in the app",
+  "SETTING_MISCELLANEOUS_TITLE": "Miscellaneous",
+  "SETTING_STARGAZERS_SUBTITLE": "Vielen Dank für Ihre Unterstützung",
+  "SETTING_STARGAZERS_TITLE": "Projekt \"Star\"-Geber (GitHub)",
+  "SETTING_STAR_GITHUB": "Projekt mit \"Star\" versehen (GitHub)",
+  "SETTING_THEME_SUBTITLE": "Ändern Sie die App im Light-Mode oder Dark-Mode",
+  "SETTING_THEME_TITLE": "Theme",
+  "SHARE": "Share",
   "STARTING_PLAYBACK": "Starting playback",
-  "BUFFERING": "Buffering...",
+  "SWITCH_THEME": "Switch Theme",
+  "THEME_MODE_DARK": "Dark",
+  "THEME_MODE_LIGHT": "Light",
+  "THEME_MODE_SYSTEM": "System",
+  "TRACK": "Songs",
+  "TRACKS_FROM_ARTIST": "Tracks from this artist.",
+  "TRACK_SINGLE": "Track",
+  "TRANSFERS": "Transfers",
   "WARNING": "Warning",
-  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
-  "ENABLE_125_SCALING": "Enable 125% scaling.",
   "YEAR": "Year",
-  "KNOW_MORE": "KNOW MORE"
+  "YES": "JA",
+  "YOUTUBE": "YouTube",
+  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online.",
+  "YOUTUBE_NO_RESULTS": "Nothing like that could be found.",
+  "YOUTUBE_WELCOME": "Search for music or give a link"
 }
