--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -1,136 +1,137 @@
 {
-  "INTERNET_ERROR": "Vérifier votre connexion Internet.",
-  "COLLECTION": "Collection",
-  "NOW_PLAYING": "Lecture en cours",
-  "SETTING": "Paramètres",
-  "OK": "OK",
-  "YES": "OUI",
-  "NO": "NON",
-  "ALBUM": "Albums",
-  "TRACK": "Pistes",
-  "ARTIST": "Artistes",
-  "THEME_MODE_LIGHT": "Clair",
-  "THEME_MODE_DARK": "Sombre",
-  "THEME_MODE_SYSTEM": "Suivre le thème du système",
-  "OPTIONS": "Options",
-  "DELETE_TRACK": "Supprimer la piste",
-  "SEARCH_HISTORY_SUBHEADER": "Vos recherches récentes",
-  "SEARCH_RESULT_LOADER_LABEL": "Obtention de votre musique ...",
-  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Recherchez et enregistrez de la musique pour la voir ici.\nActualisez-la pour voir de nouvelles choses.",
-  "COLLECTION_TOP_SUBHEADER_ALBUM": "Dernier album",
-  "COLLECTION_OTHER_SUBHEADER_ALBUM": "Plus d'album",
-  "COLLECTION_TOP_SUBHEADER_TRACK": "Dernier piste",
-  "COLLECTION_OTHER_SUBHEADER_TRACK": "Plus de pistes",
-  "COLLECTION_TOP_SUBHEADER_ARTIST": "Dernier artiste",
-  "COLLECTION_OTHER_SUBHEADER_ARTIST": "Plus d'artistes",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Pistes de l'album",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Quelques aperçus de l'album",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Êtes-vous sûr?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Voulez-vous supprimer cet album enregistré sur votre appareil?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Êtes-vous sûr?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Voulez-vous supprimer cette piste enregistrée sur votre appareil?",
-  "NOW_PLAYING_NEXT_TRACK": "Suivant",
-  "NOW_PLAYING_PREVIOUS_TRACK": "Précedent",
-  "NOW_PLAYING_NOT_PLAYING_TITLE": "Rien n'est joué",
-  "SETTING_GITHUB": "GITHUB",
-  "SETTING_STAR_GITHUB": "STAR THE PROJECT",
-  "SETTING_STARGAZERS_TITLE": "Project Stargazers",
-  "SETTING_STARGAZERS_SUBTITLE": "Merci beaucoup pour votre soutien",
-  "SETTING_LANGUAGE_TITLE": "Langues",
-  "SETTING_LANGUAGE_SUBTITLE": "Changer la langue de l'application",
-  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Redémarrage de l'application requis",
-  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Voulez-vous redémarrer l'application maintenant?",
-  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Fournisseurs de traduction",
-  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Merci beaucoup pour votre soutien à l'application.",
-  "SETTING_ACCENT_COLOR_TITLE": "Accent",
-  "SETTING_ACCENT_COLOR_SUBTITLE": "Changer la coloration d'accent de l'application",
-  "SETTING_THEME_TITLE": "Theme",
-  "SETTING_THEME_SUBTITLE": "Changez l'application en mode clair ou sombre",
-  "ABOUT_TITLE": "À propos",
   "ABOUT_SUBTITLE": "Informations sur l'application et ses développeurs",
-  "NO_DOWNLOAD_UPDATE": "Votre application est déjà mise à jour",
-  "DOWNLOAD_UPDATE": "TÉLÉCHARGER LA MISE À JOUR",
-  "SETTING_APP_VERSION_TITLE": "Version",
-  "SETTING_APP_VERSION_SUBTITLE": "Informations sur la version actuelle de l'application",
-  "SETTING_APP_VERSION_INSTALLED": "Version instalée",
-  "SETTING_APP_VERSION_LATEST": "dernière version",
-  "MENU": "Menu",
-  "SEARCH_COLLECTION": "Chercher collection",
-  "SWITCH_THEME": "Changer de theme",
-  "PLAY": "Lire",
-  "PAUSE": "Pause",
-  "DELETE": "Supprimer",
-  "SHARE": "Partager",
-  "ADD_TO_PLAYLIST": "Ajouter au Playlist",
-  "SAVE_TO_DOWNLOADS": "Enregistrer dans les téléchargements",
-  "COLLECTION_SEARCH_WELCOME": "Entrez quelque chose à rechercher dans votre collection",
-  "COLLECTION_SEARCH_NO_RESULTS": "Rien de tel n'a pu être trouvé dans votre collection",
-  "PLAYLISTS": "Playlists",
-  "PLAYLIST": "Playlist",
-  "PLAYLISTS_SUBHEADER": "Votre playlists",
-  "PLAYLISTS_CREATE": "Créer un nouveau playlist",
-  "PLAYLISTS_TEXT_FIELD_LABEL": "Nom du Playlist",
-  "PLAYLISTS_TEXT_FIELD_HINT": "Nom pour votre nouveau playlist",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Êtes-vous sûr?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Voulez-vous supprimer cette playlist?",
-  "CANCEL": "ANNULER",
-  "PLAYLIST_ADD_DIALOG_TITLE": "Ajouter au playlist",
-  "PLAYLIST_ADD_DIALOG_BODY": "Sélectionnez une playlist pour ajouter cette piste",
-  "PLAYLIST_TRACKS_SUBHEADER": "Voici les morceaux de cette playlist",
-  "TRANSFERS": "Transfers",
-  "SETTING_INDEXING_TITLE": "Indexage",
-  "SETTING_INDEXING_SUBTITLE": "Réindexez votre collection de musique",
-  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "NUMBER_STRING pistes indexées sur TOTAL_STRING ...",
-  "SETTING_INDEXING_DONE": "Indexée",
-  "SETTING_INDEXING_WARNING": "N'interrompez pas le processus.",
-  "REFRESH": "ACTUALISER",
-  "SEARCH_NO_RECENT_SEARCHES": "Vos recherches récentes s'afficheront ici",
-  "NO_INTERNET_TITLE": "Pas d'internet",
-  "NO_INTERNET_SUBTITLE": "Vérifiez votre connexion.",
-  "NO_COLLECTION_TITLE": "Collection vide",
-  "NO_COLLECTION_SUBTITLE": "Aucune musique trouvée.\nChangez où chercher la musique dans les paramètres.",
-  "DISCORD": "DISCORD SERVEUR",
-  "EXIT_TITLE": "Quitter",
-  "EXIT_SUBTITLE": "Voulez-vous quitter Harmonoid?",
-  "A_TO_Z": "A à Z",
-  "DATE_ADDED": "Date ajouté",
-  "SETTING_ACCENT_COLOR_AUTOMATIC": "Automatique accent",
-  "SETTING_MISCELLANEOUS_TITLE": "Miscellaneous",
-  "SETTING_MISCELLANEOUS_SUBTITLE": "Autres paramètres de l'application",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Activer la mécanique iOS",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Définir la plate-forme sur TargetPlatform.iOS",
-  "SELECTED_DIRECTORY": "Répertoire sélectionné:",
-  "LYRICS": "Paroles",
-  "NOTIFICATION_LYRICS_TITLE": "Notification de Paroles",
-  "NOTIFICATION_LYRICS_SUBTITLE": "Afficher les paroles dans une notification.",
-  "LYRICS_RETRIEVING": "Récupération des paroles ...",
-  "LYRICS_NOT_FOUND": "Paroles non trouvées.",
-  "COMING_UP": "à venir",
-  "ALBUM_SINGLE": "Album",
-  "TRACK_SINGLE": "Chanson",
-  "ARTIST_SINGLE": "Artiste",
-  "SEARCH": "Recherche",
-  "ALBUMS_FROM_ARTIST": "Albums de cet artiste.",
-  "TRACKS_FROM_ARTIST": "Chansons de cet artiste.",
-  "REMOVE": "SUPPRIMER",
+  "ABOUT_TITLE": "À propos",
   "ADD_NEW_FOLDER": "AJOUT DE NOUVEAU DOSSIER",
   "ADD_TO_NOW_PLAYING": "Ajouter à la liste de lecture",
-  "PLAY_NOW": "Lire maintenant",
-  "COLLECTION_SEARCH_LABEL": "recherche dans votre collection",
-  "SELECTED_DIRECTORIES": "Dossier selectionnés:",
-  "ENABLE_ACRYLIC_BLUR": "Acriver Windows acrylic blur.",
+  "ADD_TO_PLAYLIST": "Ajouter au Playlist",
+  "ALBUM": "Albums",
+  "ALBUMS_FROM_ARTIST": "Albums de cet artiste.",
+  "ALBUM_SINGLE": "Album",
+  "ARTIST": "Artistes",
+  "ARTIST_SINGLE": "Artiste",
+  "A_TO_Z": "A à Z",
+  "BUFFERING": "Tampon...",
+  "CANCEL": "ANNULER",
+  "COLLECTION": "Collection",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Voulez-vous supprimer cet album enregistré sur votre appareil?",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Êtes-vous sûr?",
+  "COLLECTION_ALBUM_INFO_SUBHEADER": "Quelques aperçus de l'album",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Voulez-vous supprimer cette playlist?",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Êtes-vous sûr?",
+  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Pistes de l'album",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Voulez-vous supprimer cette piste enregistrée sur votre appareil?",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Êtes-vous sûr?",
   "COLLECTION_INDEXING_LABEL": "En cours de synchronisation de votre musique local.\nNe fermez pas l'applicatiopn svp.",
+  "COLLECTION_OTHER_SUBHEADER_ALBUM": "Plus d'album",
+  "COLLECTION_OTHER_SUBHEADER_ARTIST": "Plus d'artistes",
+  "COLLECTION_OTHER_SUBHEADER_TRACK": "Plus de pistes",
+  "COLLECTION_SEARCH_LABEL": "recherche dans votre collection",
+  "COLLECTION_SEARCH_NO_RESULTS": "Rien de tel n'a pu être trouvé dans votre collection",
+  "COLLECTION_SEARCH_WELCOME": "Entrez quelque chose à rechercher dans votre collection",
+  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Recherchez et enregistrez de la musique pour la voir ici.\nActualisez-la pour voir de nouvelles choses.",
+  "COLLECTION_TOP_SUBHEADER_ALBUM": "Dernier album",
+  "COLLECTION_TOP_SUBHEADER_ARTIST": "Dernier artiste",
+  "COLLECTION_TOP_SUBHEADER_TRACK": "Dernier piste",
+  "COMING_UP": "à venir",
+  "DATE_ADDED": "Date ajouté",
+  "DELETE": "Supprimer",
+  "DELETE_TRACK": "Supprimer la piste",
+  "DISCORD": "DISCORD SERVEUR",
+  "DOWNLOAD_UPDATE": "TÉLÉCHARGER LA MISE À JOUR",
+  "ENABLE_125_SCALING": "Activer la mise en echelle de 125%.",
+  "ENABLE_ACRYLIC_BLUR": "Acriver Windows acrylic blur.",
+  "EXIT_SUBTITLE": "Voulez-vous quitter Harmonoid?",
+  "EXIT_TITLE": "Quitter",
+  "INTERNET_ERROR": "Vérifier votre connexion Internet.",
+  "KNOW_MORE": "KNOW MORE",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "Au moins un dosser doit rester dans votre collection.",
+  "LYRICS": "Paroles",
+  "LYRICS_NOT_FOUND": "Paroles non trouvées.",
+  "LYRICS_RETRIEVING": "Récupération des paroles ...",
+  "MENU": "Menu",
+  "NO": "NON",
+  "NOTIFICATION_LYRICS_SUBTITLE": "Afficher les paroles dans une notification.",
+  "NOTIFICATION_LYRICS_TITLE": "Notification de Paroles",
+  "NOW_PLAYING": "Lecture en cours",
+  "NOW_PLAYING_NEXT_TRACK": "Suivant",
+  "NOW_PLAYING_NOT_PLAYING_TITLE": "Rien n'est joué",
+  "NOW_PLAYING_PREVIOUS_TRACK": "Précedent",
+  "NO_COLLECTION_SUBTITLE": "Aucune musique trouvée.\nChangez où chercher la musique dans les paramètres.",
+  "NO_COLLECTION_TITLE": "Collection vide",
+  "NO_DOWNLOAD_UPDATE": "Votre application est déjà mise à jour",
+  "NO_INTERNET_SUBTITLE": "Vérifiez votre connexion.",
+  "NO_INTERNET_TITLE": "Pas d'internet",
+  "OK": "OK",
+  "OPTIONS": "Options",
+  "PAUSE": "Pause",
+  "PLAY": "Lire",
+  "PLAYLIST": "Playlists",
+  "PLAYLISTS_CREATE": "Créer un nouveau playlist",
+  "PLAYLISTS_SUBHEADER": "Votre playlists",
+  "PLAYLISTS_TEXT_FIELD_HINT": "Nom pour votre nouveau playlist",
+  "PLAYLISTS_TEXT_FIELD_LABEL": "Nom du Playlist",
+  "PLAYLIST_ADD_DIALOG_BODY": "Sélectionnez une playlist pour ajouter cette piste",
+  "PLAYLIST_ADD_DIALOG_TITLE": "Ajouter au playlist",
+  "PLAYLIST_TRACKS_SUBHEADER": "Voici les morceaux de cette playlist",
+  "PLAY_NOW": "Lire maintenant",
   "RECOMMENDATIONS": "Recommendations",
-  "YOUTUBE_WELCOME": "Rechercher une chanson ou son son lien",
-  "YOUTUBE_NO_RESULTS": "Aucune correspondance trouvée.",
-  "YOUTUBE_INTERNET_ERROR": "Lire votre musique local, en attendant que vous êtes en ligne.",
+  "REFRESH": "ACTUALISER",
+  "REMOVE": "SUPPRIMER",
   "RETRIEVING_INFO": "Recuperation d'info",
   "RETRIEVING_LINK": "Recuperation stream",
+  "SAVE_TO_DOWNLOADS": "Enregistrer dans les téléchargements",
+  "SEARCH": "Recherche",
+  "SEARCH_COLLECTION": "Chercher collection",
+  "SEARCH_HISTORY_SUBHEADER": "Vos recherches récentes",
+  "SEARCH_NO_RECENT_SEARCHES": "Vos recherches récentes s'afficheront ici",
+  "SEARCH_RESULT_LOADER_LABEL": "Obtention de votre musique ...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SELECTED_DIRECTORIES": "Dossier selectionnés:",
+  "SELECTED_DIRECTORY": "Répertoire sélectionné:",
+  "SETTING": "Paramètres",
+  "SETTING_ACCENT_COLOR_AUTOMATIC": "Automatique accent",
+  "SETTING_ACCENT_COLOR_SUBTITLE": "Changer la coloration d'accent de l'application",
+  "SETTING_ACCENT_COLOR_TITLE": "Accent",
+  "SETTING_APP_VERSION_INSTALLED": "Version instalée",
+  "SETTING_APP_VERSION_LATEST": "dernière version",
+  "SETTING_APP_VERSION_SUBTITLE": "Informations sur la version actuelle de l'application",
+  "SETTING_APP_VERSION_TITLE": "Version",
+  "SETTING_GITHUB": "GITHUB",
+  "SETTING_INDEXING_DONE": "Indexée",
+  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "NUMBER_STRING pistes indexées sur TOTAL_STRING ...",
+  "SETTING_INDEXING_SUBTITLE": "Réindexez votre collection de musique",
+  "SETTING_INDEXING_TITLE": "Indexage",
+  "SETTING_INDEXING_WARNING": "N'interrompez pas le processus.",
+  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Merci beaucoup pour votre soutien à l'application.",
+  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Fournisseurs de traduction",
+  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Voulez-vous redémarrer l'application maintenant?",
+  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Redémarrage de l'application requis",
+  "SETTING_LANGUAGE_SUBTITLE": "Changer la langue de l'application",
+  "SETTING_LANGUAGE_TITLE": "Langues",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Définir la plate-forme sur TargetPlatform.iOS",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Activer la mécanique iOS",
+  "SETTING_MISCELLANEOUS_SUBTITLE": "Autres paramètres de l'application",
+  "SETTING_MISCELLANEOUS_TITLE": "Miscellaneous",
+  "SETTING_STARGAZERS_SUBTITLE": "Merci beaucoup pour votre soutien",
+  "SETTING_STARGAZERS_TITLE": "Project Stargazers",
+  "SETTING_STAR_GITHUB": "STAR THE PROJECT",
+  "SETTING_THEME_SUBTITLE": "Changez l'application en mode clair ou sombre",
+  "SETTING_THEME_TITLE": "Theme",
+  "SHARE": "Partager",
   "STARTING_PLAYBACK": "Debut de lecture",
-  "BUFFERING": "Tampon...",
+  "SWITCH_THEME": "Changer de theme",
+  "THEME_MODE_DARK": "Sombre",
+  "THEME_MODE_LIGHT": "Clair",
+  "THEME_MODE_SYSTEM": "System",
+  "TRACK": "Pistes",
+  "TRACKS_FROM_ARTIST": "Chansons de cet artiste.",
+  "TRACK_SINGLE": "Chanson",
+  "TRANSFERS": "Transfers",
   "WARNING": "Attention",
-  "LAST_COLLECTION_DIRECTORY_REMOVED": "Au moins un dosser doit rester dans votre collection.",
-  "ENABLE_125_SCALING": "Activer la mise en echelle de 125%.",
   "YEAR": "Year",
-  "KNOW_MORE": "KNOW MORE"
+  "YES": "OUI",
+  "YOUTUBE": "YouTube",
+  "YOUTUBE_INTERNET_ERROR": "Lire votre musique local, en attendant que vous êtes en ligne.",
+  "YOUTUBE_NO_RESULTS": "Aucune correspondance trouvée.",
+  "YOUTUBE_WELCOME": "Rechercher une chanson ou son son lien"
 }
