--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -1,136 +1,137 @@
 {
-  "INTERNET_ERROR": "अपना इंटरनेट कनेक्शन चेक करें।",
-  "COLLECTION": "कलेक्शन",
-  "NOW_PLAYING": "अभी बजता",
-  "SETTING": "सेटिंग",
-  "OK": "ठीक",
-  "YES": "हाँ",
-  "NO": "नहीं",
-  "ALBUM": "एल्बम",
-  "TRACK": "गाने",
-  "ARTIST": "कलाकार",
-  "THEME_MODE_LIGHT": "लाइट",
-  "THEME_MODE_DARK": "डार्क",
-  "THEME_MODE_SYSTEM": "सिस्टम थीम",
-  "OPTIONS": "विकल्प",
-  "DELETE_TRACK": "गाना डिलीट करें",
-  "SEARCH_HISTORY_SUBHEADER": "आपके पिछले खोज",
-  "SEARCH_RESULT_LOADER_LABEL": "आपका गाना आ रहा है...",
-  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "अपने पसंद के गानों को यहाँ सुनने के लिए, उन्हें ढूंढे व सेव करें।\nअपना कलेक्शन रिफ्रेश करने के लिए रिफ्रेश बटन दबायें।",
-  "COLLECTION_TOP_SUBHEADER_ALBUM": "नयी एल्बम",
-  "COLLECTION_OTHER_SUBHEADER_ALBUM": "अन्य एल्बम",
-  "COLLECTION_TOP_SUBHEADER_TRACK": "नया गाना",
-  "COLLECTION_OTHER_SUBHEADER_TRACK": "अन्य गाने",
-  "COLLECTION_TOP_SUBHEADER_ARTIST": "नया कलाकार",
-  "COLLECTION_OTHER_SUBHEADER_ARTIST": "अन्य कलाकार",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "एल्बम के गाने",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "एल्बम के बारे में थोड़ी जानकारी",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "डिलीट",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "क्या आप इस एल्बम को डिलीट करना चाहते हैं?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "डिलीट",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "क्या आप इस गाने को डिलीट करना चाहते हैं?",
-  "NOW_PLAYING_NEXT_TRACK": "अगला गाना",
-  "NOW_PLAYING_PREVIOUS_TRACK": "पिछला गाना",
-  "NOW_PLAYING_NOT_PLAYING_TITLE": "अभी कुछ भी नहीं बज रहा है...",
-  "SETTING_GITHUB": "गिटहब",
-  "SETTING_STAR_GITHUB": "स्टार करें",
-  "SETTING_STARGAZERS_TITLE": "प्रोजेक्ट स्टारगेज़र्स",
-  "SETTING_STARGAZERS_SUBTITLE": "आपके प्यार के लिए शुक्रिया",
-  "SETTING_LANGUAGE_TITLE": "भाषा",
-  "SETTING_LANGUAGE_SUBTITLE": "अपनी ऐप की भाषा बदलें",
-  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "ऐप रीस्टार्ट",
-  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "क्या आप ऐप को अभी रीस्टार्ट करना चाहेंगे?",
-  "SETTING_LANGUAGE_PROVIDERS_TITLE": "अनुवाद प्रदाता",
-  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "आपके योगदान के लिए शुक्रिया",
-  "SETTING_ACCENT_COLOR_TITLE": "ऐप रंग",
-  "SETTING_ACCENT_COLOR_SUBTITLE": "ऐप के लिए रंग बदलें",
-  "SETTING_THEME_TITLE": "ऐप मोड",
-  "SETTING_THEME_SUBTITLE": "ऐप को लाइट या डार्क मोड में यूज़ करें",
-  "ABOUT_TITLE": "प्रोजेक्ट के बारे में",
   "ABOUT_SUBTITLE": "प्रोजेक्ट और इसके डेवलपर्स के बारे में जानकारी",
-  "NO_DOWNLOAD_UPDATE": "आपकी ऐप पहले से अपडेट है",
-  "DOWNLOAD_UPDATE": "डाउनलोड अपडेट",
-  "SETTING_APP_VERSION_TITLE": "ऐप वर्ज़न",
-  "SETTING_APP_VERSION_SUBTITLE": "ऐप के इस वर्ज़न के बारे में जानकारी",
-  "SETTING_APP_VERSION_INSTALLED": "इन्सटाल्ड वर्ज़न",
-  "SETTING_APP_VERSION_LATEST": "लेटेस्ट वर्ज़न",
-  "MENU": "मेन्यू",
-  "SEARCH_COLLECTION": "कलेक्शन में ढूंढें",
-  "SWITCH_THEME": "थीम बदलें",
-  "PLAY": "बजाएं",
-  "PAUSE": "रोकें",
-  "DELETE": "डिलीट",
-  "SHARE": "शेयर",
-  "ADD_TO_PLAYLIST": "प्लेलिस्ट में जोड़ें",
-  "SAVE_TO_DOWNLOADS": "डौन्लोडस में सेव करें",
-  "COLLECTION_SEARCH_WELCOME": "खोजने के लिए कुछ लिखें",
-  "COLLECTION_SEARCH_NO_RESULTS": "ऐसा कुछ भी नहीं मिला",
-  "PLAYLISTS": "प्लेलिस्टें",
-  "PLAYLIST": "प्लेलिस्ट",
-  "PLAYLISTS_SUBHEADER": "आपकी प्लेलिस्टें",
-  "PLAYLISTS_CREATE": "नयी प्लेलिस्ट बनायें",
-  "PLAYLISTS_TEXT_FIELD_LABEL": "नाम",
-  "PLAYLISTS_TEXT_FIELD_HINT": "प्लेलिस्ट का नाम",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "डिलीट?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "क्या आप इस प्लेलिस्ट को डिलीट करना चाहते हैं?",
-  "CANCEL": "कैंसिल",
-  "PLAYLIST_ADD_DIALOG_TITLE": "प्लेलिस्ट में जोड़े",
-  "PLAYLIST_ADD_DIALOG_BODY": "प्लेलिस्ट चुनें",
-  "PLAYLIST_TRACKS_SUBHEADER": "इस प्लेलिस्ट के गाने",
-  "TRANSFERS": "ट्रांसफर्स",
-  "SETTING_INDEXING_TITLE": "इंडेक्सिंग",
-  "SETTING_INDEXING_SUBTITLE": "अपने कलेक्शन को दोबारा इंडेक्स करें।",
-  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "TOTAL_STRING में से NUMBER_STRING गाने इंडेक्स हो गए...",
-  "SETTING_INDEXING_DONE": "आपका कलेक्शन इंडेक्स्ड है",
-  "SETTING_INDEXING_WARNING": "प्रोसेस को चलने से ना रोकें।",
-  "REFRESH": "रिफ्रेश",
-  "SEARCH_NO_RECENT_SEARCHES": "आपके ",
-  "NO_INTERNET_TITLE": "इंटरनेट एरर",
-  "NO_INTERNET_SUBTITLE": "अपना कनेक्शन चेक करें।",
-  "NO_COLLECTION_TITLE": "खाली कलेक्शन",
-  "NO_COLLECTION_SUBTITLE": "कोई गाना नहीं मिला।",
-  "DISCORD": "डिस्कॉर्ड सर्वर",
-  "EXIT_TITLE": "बंद",
-  "EXIT_SUBTITLE": "क्या आप Harmonoid को छोड़ना चाहते हैं?",
-  "A_TO_Z": "A से Z",
-  "DATE_ADDED": "तिथि",
-  "SETTING_ACCENT_COLOR_AUTOMATIC": "ऑटोमैटिक ऐप रंग",
-  "SETTING_MISCELLANEOUS_TITLE": "अन्य सेटिंग",
-  "SETTING_MISCELLANEOUS_SUBTITLE": "ऐप में अन्य सेटिंग्स बदलें",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "iOS मोड",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "platform को TargetPlatform.iOS करें",
-  "SELECTED_DIRECTORY": "Selected directory:",
-  "LYRICS": "गाने के बोल",
-  "NOTIFICATION_LYRICS_TITLE": "गाने के बोल की अधिसूचना",
-  "NOTIFICATION_LYRICS_SUBTITLE": "अधिसूचना में गाने के बोल दिखाएं।",
-  "LYRICS_RETRIEVING": "गाने के बोल पुनः प्राप्त किये जा रहे है...",
-  "LYRICS_NOT_FOUND": "गाने के बोल नहीं मिले",
-  "COMING_UP": "अगला आनेवाला",
-  "ALBUM_SINGLE": "Album",
-  "TRACK_SINGLE": "Track",
-  "ARTIST_SINGLE": "Artist",
-  "SEARCH": "खोज़े",
-  "ALBUMS_FROM_ARTIST": "Albums from this artist.",
-  "TRACKS_FROM_ARTIST": "Tracks from this artist.",
-  "REMOVE": "हटाये",
+  "ABOUT_TITLE": "प्रोजेक्ट के बारे में",
   "ADD_NEW_FOLDER": "नया फ़ोल्डर बनाये",
   "ADD_TO_NOW_PLAYING": "अभी चल रहे गानों में जोड़ें",
-  "PLAY_NOW": "अभी गाना बजाएं",
-  "COLLECTION_SEARCH_LABEL": "आपके कलेक्शन में खोजें",
-  "SELECTED_DIRECTORIES": "Selected directories:",
-  "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
+  "ADD_TO_PLAYLIST": "प्लेलिस्ट में जोड़ें",
+  "ALBUM": "एल्बम",
+  "ALBUMS_FROM_ARTIST": "Albums from this artist.",
+  "ALBUM_SINGLE": "Album",
+  "ARTIST": "कलाकार",
+  "ARTIST_SINGLE": "Artist",
+  "A_TO_Z": "A से Z",
+  "BUFFERING": "बफर हो रहा है...",
+  "CANCEL": "कैंसिल",
+  "COLLECTION": "कलेक्शन",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "क्या आप इस एल्बम को डिलीट करना चाहते हैं?",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "डिलीट",
+  "COLLECTION_ALBUM_INFO_SUBHEADER": "एल्बम के बारे में थोड़ी जानकारी",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "क्या आप इस प्लेलिस्ट को डिलीट करना चाहते हैं?",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "डिलीट?",
+  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "एल्बम के गाने",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "क्या आप इस गाने को डिलीट करना चाहते हैं?",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "डिलीट",
   "COLLECTION_INDEXING_LABEL": "आपका स्थानीय संगीत सिंक्रनाइज़ किया जा रहा है.\nऐप्लिकेशन को बंद करना अच्छा विचार नहीं है!",
+  "COLLECTION_OTHER_SUBHEADER_ALBUM": "अन्य एल्बम",
+  "COLLECTION_OTHER_SUBHEADER_ARTIST": "अन्य कलाकार",
+  "COLLECTION_OTHER_SUBHEADER_TRACK": "अन्य गाने",
+  "COLLECTION_SEARCH_LABEL": "आपके कलेक्शन में खोजें",
+  "COLLECTION_SEARCH_NO_RESULTS": "ऐसा कुछ भी नहीं मिला",
+  "COLLECTION_SEARCH_WELCOME": "खोजने के लिए कुछ लिखें",
+  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "अपने पसंद के गानों को यहाँ सुनने के लिए, उन्हें ढूंढे व सेव करें।\nअपना कलेक्शन रिफ्रेश करने के लिए रिफ्रेश बटन दबायें।",
+  "COLLECTION_TOP_SUBHEADER_ALBUM": "नयी एल्बम",
+  "COLLECTION_TOP_SUBHEADER_ARTIST": "नया कलाकार",
+  "COLLECTION_TOP_SUBHEADER_TRACK": "नया गाना",
+  "COMING_UP": "अगला आनेवाला",
+  "DATE_ADDED": "तिथि",
+  "DELETE": "डिलीट",
+  "DELETE_TRACK": "गाना डिलीट करें",
+  "DISCORD": "डिस्कॉर्ड सर्वर",
+  "DOWNLOAD_UPDATE": "डाउनलोड अपडेट",
+  "ENABLE_125_SCALING": "Enable 125% scaling.",
+  "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
+  "EXIT_SUBTITLE": "क्या आप Harmonoid को छोड़ना चाहते हैं?",
+  "EXIT_TITLE": "बंद",
+  "INTERNET_ERROR": "अपना इंटरनेट कनेक्शन चेक करें।",
+  "KNOW_MORE": "KNOW MORE",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "आपके कलेक्शन में कम से कम एक फ़ोल्डर रहने की आवश्यकता है।",
+  "LYRICS": "गाने के बोल",
+  "LYRICS_NOT_FOUND": "गाने के बोल नहीं मिले",
+  "LYRICS_RETRIEVING": "गाने के बोल पुनः प्राप्त किये जा रहे है...",
+  "MENU": "मेन्यू",
+  "NO": "नहीं",
+  "NOTIFICATION_LYRICS_SUBTITLE": "अधिसूचना में गाने के बोल दिखाएं।",
+  "NOTIFICATION_LYRICS_TITLE": "गाने के बोल की अधिसूचना",
+  "NOW_PLAYING": "अभी बजता",
+  "NOW_PLAYING_NEXT_TRACK": "अगला गाना",
+  "NOW_PLAYING_NOT_PLAYING_TITLE": "अभी कुछ भी नहीं बज रहा है...",
+  "NOW_PLAYING_PREVIOUS_TRACK": "पिछला गाना",
+  "NO_COLLECTION_SUBTITLE": "कोई गाना नहीं मिला।",
+  "NO_COLLECTION_TITLE": "खाली कलेक्शन",
+  "NO_DOWNLOAD_UPDATE": "आपकी ऐप पहले से अपडेट है",
+  "NO_INTERNET_SUBTITLE": "अपना कनेक्शन चेक करें।",
+  "NO_INTERNET_TITLE": "इंटरनेट एरर",
+  "OK": "ठीक",
+  "OPTIONS": "विकल्प",
+  "PAUSE": "रोकें",
+  "PLAY": "बजाएं",
+  "PLAYLIST": "Playlists",
+  "PLAYLISTS_CREATE": "नयी प्लेलिस्ट बनायें",
+  "PLAYLISTS_SUBHEADER": "आपकी प्लेलिस्टें",
+  "PLAYLISTS_TEXT_FIELD_HINT": "प्लेलिस्ट का नाम",
+  "PLAYLISTS_TEXT_FIELD_LABEL": "नाम",
+  "PLAYLIST_ADD_DIALOG_BODY": "प्लेलिस्ट चुनें",
+  "PLAYLIST_ADD_DIALOG_TITLE": "प्लेलिस्ट में जोड़े",
+  "PLAYLIST_TRACKS_SUBHEADER": "इस प्लेलिस्ट के गाने",
+  "PLAY_NOW": "अभी गाना बजाएं",
   "RECOMMENDATIONS": "अनुशंसित",
-  "YOUTUBE_WELCOME": "संगीत खोजें या लिंक दें",
-  "YOUTUBE_NO_RESULTS": "ऐसा कुछ नहीं मिला।",
-  "YOUTUBE_INTERNET_ERROR": "जब तक आप वापस ऑनलाइन हो जाते हैं, तब तक हम आपका स्थानीय संगीत बजाते हैं।",
+  "REFRESH": "रिफ्रेश",
+  "REMOVE": "हटाये",
   "RETRIEVING_INFO": "जानकारी पुनः प्राप्त कि जा रही है",
   "RETRIEVING_LINK": "स्ट्रीम पुनः प्राप्त कि जा रही है",
+  "SAVE_TO_DOWNLOADS": "डौन्लोडस में सेव करें",
+  "SEARCH": "खोज़े",
+  "SEARCH_COLLECTION": "कलेक्शन में ढूंढें",
+  "SEARCH_HISTORY_SUBHEADER": "आपके पिछले खोज",
+  "SEARCH_NO_RECENT_SEARCHES": "आपके ",
+  "SEARCH_RESULT_LOADER_LABEL": "आपका गाना आ रहा है...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SELECTED_DIRECTORIES": "Selected directories:",
+  "SELECTED_DIRECTORY": "Selected directory:",
+  "SETTING": "सेटिंग",
+  "SETTING_ACCENT_COLOR_AUTOMATIC": "ऑटोमैटिक ऐप रंग",
+  "SETTING_ACCENT_COLOR_SUBTITLE": "ऐप के लिए रंग बदलें",
+  "SETTING_ACCENT_COLOR_TITLE": "ऐप रंग",
+  "SETTING_APP_VERSION_INSTALLED": "इन्सटाल्ड वर्ज़न",
+  "SETTING_APP_VERSION_LATEST": "लेटेस्ट वर्ज़न",
+  "SETTING_APP_VERSION_SUBTITLE": "ऐप के इस वर्ज़न के बारे में जानकारी",
+  "SETTING_APP_VERSION_TITLE": "ऐप वर्ज़न",
+  "SETTING_GITHUB": "गिटहब",
+  "SETTING_INDEXING_DONE": "आपका कलेक्शन इंडेक्स्ड है",
+  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "TOTAL_STRING में से NUMBER_STRING गाने इंडेक्स हो गए...",
+  "SETTING_INDEXING_SUBTITLE": "अपने कलेक्शन को दोबारा इंडेक्स करें।",
+  "SETTING_INDEXING_TITLE": "इंडेक्सिंग",
+  "SETTING_INDEXING_WARNING": "प्रोसेस को चलने से ना रोकें।",
+  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "आपके योगदान के लिए शुक्रिया",
+  "SETTING_LANGUAGE_PROVIDERS_TITLE": "अनुवाद प्रदाता",
+  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "क्या आप ऐप को अभी रीस्टार्ट करना चाहेंगे?",
+  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "ऐप रीस्टार्ट",
+  "SETTING_LANGUAGE_SUBTITLE": "अपनी ऐप की भाषा बदलें",
+  "SETTING_LANGUAGE_TITLE": "भाषा",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "platform को TargetPlatform.iOS करें",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "iOS मोड",
+  "SETTING_MISCELLANEOUS_SUBTITLE": "ऐप में अन्य सेटिंग्स बदलें",
+  "SETTING_MISCELLANEOUS_TITLE": "अन्य सेटिंग",
+  "SETTING_STARGAZERS_SUBTITLE": "आपके प्यार के लिए शुक्रिया",
+  "SETTING_STARGAZERS_TITLE": "प्रोजेक्ट स्टारगेज़र्स",
+  "SETTING_STAR_GITHUB": "स्टार करें",
+  "SETTING_THEME_SUBTITLE": "ऐप को लाइट या डार्क मोड में यूज़ करें",
+  "SETTING_THEME_TITLE": "ऐप मोड",
+  "SHARE": "शेयर",
   "STARTING_PLAYBACK": "प्लेबैक शुरू हो रहा है",
-  "BUFFERING": "बफर हो रहा है...",
+  "SWITCH_THEME": "थीम बदलें",
+  "THEME_MODE_DARK": "डार्क",
+  "THEME_MODE_LIGHT": "लाइट",
+  "THEME_MODE_SYSTEM": "System",
+  "TRACK": "गाने",
+  "TRACKS_FROM_ARTIST": "Tracks from this artist.",
+  "TRACK_SINGLE": "Track",
+  "TRANSFERS": "ट्रांसफर्स",
   "WARNING": "चेतावनी",
-  "LAST_COLLECTION_DIRECTORY_REMOVED": "आपके कलेक्शन में कम से कम एक फ़ोल्डर रहने की आवश्यकता है।",
-  "ENABLE_125_SCALING": "Enable 125% scaling.",
   "YEAR": "Year",
-  "KNOW_MORE": "KNOW MORE"
+  "YES": "हाँ",
+  "YOUTUBE": "YouTube",
+  "YOUTUBE_INTERNET_ERROR": "जब तक आप वापस ऑनलाइन हो जाते हैं, तब तक हम आपका स्थानीय संगीत बजाते हैं।",
+  "YOUTUBE_NO_RESULTS": "ऐसा कुछ नहीं मिला।",
+  "YOUTUBE_WELCOME": "संगीत खोजें या लिंक दें"
 }
