--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -1,136 +1,137 @@
 {
-  "INTERNET_ERROR": "Nincs internetelérés.",
-  "COLLECTION": "Gyűjtemény",
-  "NOW_PLAYING": "Most játszott",
-  "SETTING": "Beállítások",
-  "OK": "OK",
-  "YES": "IGEN",
-  "NO": "NEM",
-  "ALBUM": "Albumok",
-  "TRACK": "Számok",
-  "ARTIST": "Előadók",
-  "THEME_MODE_LIGHT": "Világos",
-  "THEME_MODE_DARK": "Sötét",
-  "THEME_MODE_SYSTEM": "Rendszertéma",
-  "OPTIONS": "Opciók",
-  "DELETE_TRACK": "Szám törlése",
-  "SEARCH_HISTORY_SUBHEADER": "Legutóbbi keresések",
-  "SEARCH_RESULT_LOADER_LABEL": "Zenék hozzádása folyamatban...",
-  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Keress és ments számokat, hogy itt megjelenjenek.\nFrissíts, hogy lásd az újdonságokat.",
-  "COLLECTION_TOP_SUBHEADER_ALBUM": "Legújabb album",
-  "COLLECTION_OTHER_SUBHEADER_ALBUM": "További albumok",
-  "COLLECTION_TOP_SUBHEADER_TRACK": "Legújabb szám",
-  "COLLECTION_OTHER_SUBHEADER_TRACK": "További számok",
-  "COLLECTION_TOP_SUBHEADER_ARTIST": "Legújabb előadó",
-  "COLLECTION_OTHER_SUBHEADER_ARTIST": "További előadók",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Számok az albumból",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Pár tudnivaló az albumról",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Egészen biztos?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Törölni akarod ezt a letöltött albumot az eszközödről?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Egészen biztos?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Törölni akarod ezt a letöltött számot az eszközödről?",
-  "NOW_PLAYING_NEXT_TRACK": "KÖVETKEZŐ",
-  "NOW_PLAYING_PREVIOUS_TRACK": "ELŐZŐ",
-  "NOW_PLAYING_NOT_PLAYING_TITLE": "Semmit sem játszol le épp",
-  "SETTING_GITHUB": "GITHUB",
-  "SETTING_STAR_GITHUB": "CSILLAGOZD BE A PROJEKTET",
-  "SETTING_STARGAZERS_TITLE": "A projektet csillagozták",
-  "SETTING_STARGAZERS_SUBTITLE": "Nagyon köszönjük a támogatást",
-  "SETTING_LANGUAGE_TITLE": "Nyelv",
-  "SETTING_LANGUAGE_SUBTITLE": "Az app nyelvének beállítása",
-  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Újra kell indítani az appot",
-  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Újraindítod most?",
-  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Fordítók",
-  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Köszönjük a segítséget",
-  "SETTING_ACCENT_COLOR_TITLE": "Szín",
-  "SETTING_ACCENT_COLOR_SUBTITLE": "Beállíthatod az app színét",
-  "SETTING_THEME_TITLE": "Téma",
-  "SETTING_THEME_SUBTITLE": "Világos vagy sötét módot állíthatsz be",
-  "ABOUT_TITLE": "Névjegy",
   "ABOUT_SUBTITLE": "Infók az appról és fejlesztőiről",
-  "NO_DOWNLOAD_UPDATE": "A legfrissebb verziót futtatod.",
-  "DOWNLOAD_UPDATE": "FRISSÍTÉS LETÖLTÉSE",
-  "SETTING_APP_VERSION_TITLE": "Verzió",
-  "SETTING_APP_VERSION_SUBTITLE": "Tudnivalók a telepített app verziójáról",
-  "SETTING_APP_VERSION_INSTALLED": "Telepített verzió",
-  "SETTING_APP_VERSION_LATEST": "Legfrissebb verzió",
-  "MENU": "Menü",
-  "SEARCH_COLLECTION": "Keresés a gyűjteményben",
-  "SWITCH_THEME": "Téma váltása",
-  "PLAY": "Lejátszás",
-  "PAUSE": "Szünet",
-  "DELETE": "Törlés",
-  "SHARE": "Megosztás",
-  "ADD_TO_PLAYLIST": "Hozzáadás lejátszási listához",
-  "SAVE_TO_DOWNLOADS": "Mentés a letöltések közé",
-  "COLLECTION_SEARCH_WELCOME": "Mit szeretnél hallgatni a gyűjteményedből?",
-  "COLLECTION_SEARCH_NO_RESULTS": "Nincs találat a gyűjteményedben.",
-  "PLAYLISTS": "Lejátszási listák",
-  "PLAYLIST": "Lejátszási lista",
-  "PLAYLISTS_SUBHEADER": "Lejátszási listáid",
-  "PLAYLISTS_CREATE": "Lejátszási lista létrehozása",
-  "PLAYLISTS_TEXT_FIELD_LABEL": "Lejátszási lista neve",
-  "PLAYLISTS_TEXT_FIELD_HINT": "Adj nevet a listádnak",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Egészen biztos?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Törölni akarod ezt a lejátszási listát?",
-  "CANCEL": "MÉGSE",
-  "PLAYLIST_ADD_DIALOG_TITLE": "Hozzáadás lejátszási listához",
-  "PLAYLIST_ADD_DIALOG_BODY": "Melyik listához akarod hozzáadni?",
-  "PLAYLIST_TRACKS_SUBHEADER": "A lejátszási lista számai",
-  "TRANSFERS": "Átvitelek",
-  "SETTING_INDEXING_TITLE": "Helyi gyűjtemény",
-  "SETTING_INDEXING_SUBTITLE": "Helyi gyűjtemény frissítése",
-  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Frissítés folyamatban... NUMBER_STRING / TOTAL_STRING",
-  "SETTING_INDEXING_DONE": "Frissítve",
-  "SETTING_INDEXING_WARNING": "Ne szakítsd meg a folyamatot.",
-  "REFRESH": "FRISSÍTÉS",
-  "SEARCH_NO_RECENT_SEARCHES": "Itt fognak megjelenni a legutóbbi kereséseid",
-  "NO_INTERNET_TITLE": "Nincs internet",
-  "NO_INTERNET_SUBTITLE": "Ellenőrizd az internetkapcsolatod.",
-  "NO_COLLECTION_TITLE": "A gyűjteményed üres",
-  "NO_COLLECTION_SUBTITLE": "Nincsenek zenék.\nÁllítsd be a zenéid helyét a beállításokban.",
-  "DISCORD": "DISCORD SZERVER",
-  "EXIT_TITLE": "Kilépés",
-  "EXIT_SUBTITLE": "Biztosan kilépsz a Harmonoidból?",
-  "A_TO_Z": "Ábécérend",
-  "DATE_ADDED": "Hozzáadás dátuma",
-  "SETTING_ACCENT_COLOR_AUTOMATIC": "Automatikus",
-  "SETTING_MISCELLANEOUS_TITLE": "Egyéb",
-  "SETTING_MISCELLANEOUS_SUBTITLE": "Minden más beállítás",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "iOS funkciók engedélyezése",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Állítsd a platformot \"TargetPlatform.iOS\"-ra.",
-  "SELECTED_DIRECTORY": "Kiválasztott mappa:",
-  "LYRICS": "Énekszöveg",
-  "NOTIFICATION_LYRICS_TITLE": "Énekszöveg értesítésben",
-  "NOTIFICATION_LYRICS_SUBTITLE": "Énekszöveg megjelenítése értesítésként.",
-  "LYRICS_RETRIEVING": "Énekszöveg betöltése...",
-  "LYRICS_NOT_FOUND": "Nem található énekszöveg.",
-  "COMING_UP": "Coming Up",
-  "ALBUM_SINGLE": "Album",
-  "TRACK_SINGLE": "Szám",
-  "ARTIST_SINGLE": "Előadó",
-  "SEARCH": "Keresés",
-  "ALBUMS_FROM_ARTIST": "Az előadó albumjai:",
-  "TRACKS_FROM_ARTIST": "Számok az előadótól:",
-  "REMOVE": "ELTÁVOLÍTÁS",
+  "ABOUT_TITLE": "Névjegy",
   "ADD_NEW_FOLDER": "ÚJ MAPPA",
   "ADD_TO_NOW_PLAYING": "Műsorlistához adás",
-  "PLAY_NOW": "Lejátszás most",
-  "COLLECTION_SEARCH_LABEL": "Keresés a gyűjteményedben",
-  "SELECTED_DIRECTORIES": "Kiválasztott mappák:",
-  "ENABLE_ACRYLIC_BLUR": "Windows áttetsző háttér engedélyezése",
+  "ADD_TO_PLAYLIST": "Hozzáadás lejátszási listához",
+  "ALBUM": "Albumok",
+  "ALBUMS_FROM_ARTIST": "Az előadó albumjai:",
+  "ALBUM_SINGLE": "Album",
+  "ARTIST": "Előadók",
+  "ARTIST_SINGLE": "Előadó",
+  "A_TO_Z": "Ábécérend",
+  "BUFFERING": "Betöltés...",
+  "CANCEL": "MÉGSE",
+  "COLLECTION": "Gyűjtemény",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Törölni akarod ezt a letöltött albumot az eszközödről?",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Egészen biztos?",
+  "COLLECTION_ALBUM_INFO_SUBHEADER": "Pár tudnivaló az albumról",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Törölni akarod ezt a lejátszási listát?",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Egészen biztos?",
+  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Számok az albumból",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Törölni akarod ezt a letöltött számot az eszközödről?",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Egészen biztos?",
   "COLLECTION_INDEXING_LABEL": "A helyi fájlok szinkronizálása folyamatban.\nEszedbe se jusson bezárni az appot.",
+  "COLLECTION_OTHER_SUBHEADER_ALBUM": "További albumok",
+  "COLLECTION_OTHER_SUBHEADER_ARTIST": "További előadók",
+  "COLLECTION_OTHER_SUBHEADER_TRACK": "További számok",
+  "COLLECTION_SEARCH_LABEL": "Keresés a gyűjteményedben",
+  "COLLECTION_SEARCH_NO_RESULTS": "Nincs találat a gyűjteményedben.",
+  "COLLECTION_SEARCH_WELCOME": "Mit szeretnél hallgatni a gyűjteményedből?",
+  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Keress és ments számokat, hogy itt megjelenjenek.\nFrissíts, hogy lásd az újdonságokat.",
+  "COLLECTION_TOP_SUBHEADER_ALBUM": "Legújabb album",
+  "COLLECTION_TOP_SUBHEADER_ARTIST": "Legújabb előadó",
+  "COLLECTION_TOP_SUBHEADER_TRACK": "Legújabb szám",
+  "COMING_UP": "Coming Up",
+  "DATE_ADDED": "Hozzáadás dátuma",
+  "DELETE": "Törlés",
+  "DELETE_TRACK": "Szám törlése",
+  "DISCORD": "DISCORD SZERVER",
+  "DOWNLOAD_UPDATE": "FRISSÍTÉS LETÖLTÉSE",
+  "ENABLE_125_SCALING": "Enable 125% scaling.",
+  "ENABLE_ACRYLIC_BLUR": "Windows áttetsző háttér engedélyezése",
+  "EXIT_SUBTITLE": "Biztosan kilépsz a Harmonoidból?",
+  "EXIT_TITLE": "Kilépés",
+  "INTERNET_ERROR": "Nincs internetelérés.",
+  "KNOW_MORE": "KNOW MORE",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
+  "LYRICS": "Énekszöveg",
+  "LYRICS_NOT_FOUND": "Nem található énekszöveg.",
+  "LYRICS_RETRIEVING": "Énekszöveg betöltése...",
+  "MENU": "Menü",
+  "NO": "NEM",
+  "NOTIFICATION_LYRICS_SUBTITLE": "Énekszöveg megjelenítése értesítésként.",
+  "NOTIFICATION_LYRICS_TITLE": "Énekszöveg értesítésben",
+  "NOW_PLAYING": "Most játszott",
+  "NOW_PLAYING_NEXT_TRACK": "KÖVETKEZŐ",
+  "NOW_PLAYING_NOT_PLAYING_TITLE": "Semmit sem játszol le épp",
+  "NOW_PLAYING_PREVIOUS_TRACK": "ELŐZŐ",
+  "NO_COLLECTION_SUBTITLE": "Nincsenek zenék.\nÁllítsd be a zenéid helyét a beállításokban.",
+  "NO_COLLECTION_TITLE": "A gyűjteményed üres",
+  "NO_DOWNLOAD_UPDATE": "A legfrissebb verziót futtatod.",
+  "NO_INTERNET_SUBTITLE": "Ellenőrizd az internetkapcsolatod.",
+  "NO_INTERNET_TITLE": "Nincs internet",
+  "OK": "OK",
+  "OPTIONS": "Opciók",
+  "PAUSE": "Szünet",
+  "PLAY": "Lejátszás",
+  "PLAYLIST": "Playlists",
+  "PLAYLISTS_CREATE": "Lejátszási lista létrehozása",
+  "PLAYLISTS_SUBHEADER": "Lejátszási listáid",
+  "PLAYLISTS_TEXT_FIELD_HINT": "Adj nevet a listádnak",
+  "PLAYLISTS_TEXT_FIELD_LABEL": "Lejátszási lista neve",
+  "PLAYLIST_ADD_DIALOG_BODY": "Melyik listához akarod hozzáadni?",
+  "PLAYLIST_ADD_DIALOG_TITLE": "Hozzáadás lejátszási listához",
+  "PLAYLIST_TRACKS_SUBHEADER": "A lejátszási lista számai",
+  "PLAY_NOW": "Lejátszás most",
   "RECOMMENDATIONS": "Ajánlott",
-  "YOUTUBE_WELCOME": "Keresés a YouTube-on (vagy link bemásolása)",
-  "YOUTUBE_NO_RESULTS": "Nincs találat a YouTube-on!",
-  "YOUTUBE_INTERNET_ERROR": "Folytassuk a helyi zenéiddel, amíg vissza nem tér az internet.",
+  "REFRESH": "FRISSÍTÉS",
+  "REMOVE": "ELTÁVOLÍTÁS",
   "RETRIEVING_INFO": "Azonosítás...",
   "RETRIEVING_LINK": "Adatfolyam betöltése...",
+  "SAVE_TO_DOWNLOADS": "Mentés a letöltések közé",
+  "SEARCH": "Keresés",
+  "SEARCH_COLLECTION": "Keresés a gyűjteményben",
+  "SEARCH_HISTORY_SUBHEADER": "Legutóbbi keresések",
+  "SEARCH_NO_RECENT_SEARCHES": "Itt fognak megjelenni a legutóbbi kereséseid",
+  "SEARCH_RESULT_LOADER_LABEL": "Zenék hozzádása folyamatban...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SELECTED_DIRECTORIES": "Kiválasztott mappák:",
+  "SELECTED_DIRECTORY": "Kiválasztott mappa:",
+  "SETTING": "Beállítások",
+  "SETTING_ACCENT_COLOR_AUTOMATIC": "Automatikus",
+  "SETTING_ACCENT_COLOR_SUBTITLE": "Beállíthatod az app színét",
+  "SETTING_ACCENT_COLOR_TITLE": "Szín",
+  "SETTING_APP_VERSION_INSTALLED": "Telepített verzió",
+  "SETTING_APP_VERSION_LATEST": "Legfrissebb verzió",
+  "SETTING_APP_VERSION_SUBTITLE": "Tudnivalók a telepített app verziójáról",
+  "SETTING_APP_VERSION_TITLE": "Verzió",
+  "SETTING_GITHUB": "GITHUB",
+  "SETTING_INDEXING_DONE": "Frissítve",
+  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Frissítés folyamatban... NUMBER_STRING / TOTAL_STRING",
+  "SETTING_INDEXING_SUBTITLE": "Helyi gyűjtemény frissítése",
+  "SETTING_INDEXING_TITLE": "Helyi gyűjtemény",
+  "SETTING_INDEXING_WARNING": "Ne szakítsd meg a folyamatot.",
+  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Köszönjük a segítséget",
+  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Fordítók",
+  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Újraindítod most?",
+  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Újra kell indítani az appot",
+  "SETTING_LANGUAGE_SUBTITLE": "Az app nyelvének beállítása",
+  "SETTING_LANGUAGE_TITLE": "Nyelv",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Állítsd a platformot \"TargetPlatform.iOS\"-ra.",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "iOS funkciók engedélyezése",
+  "SETTING_MISCELLANEOUS_SUBTITLE": "Minden más beállítás",
+  "SETTING_MISCELLANEOUS_TITLE": "Egyéb",
+  "SETTING_STARGAZERS_SUBTITLE": "Nagyon köszönjük a támogatást",
+  "SETTING_STARGAZERS_TITLE": "A projektet csillagozták",
+  "SETTING_STAR_GITHUB": "CSILLAGOZD BE A PROJEKTET",
+  "SETTING_THEME_SUBTITLE": "Világos vagy sötét módot állíthatsz be",
+  "SETTING_THEME_TITLE": "Téma",
+  "SHARE": "Megosztás",
   "STARTING_PLAYBACK": "Lejátszás indítása...",
-  "BUFFERING": "Betöltés...",
+  "SWITCH_THEME": "Téma váltása",
+  "THEME_MODE_DARK": "Sötét",
+  "THEME_MODE_LIGHT": "Világos",
+  "THEME_MODE_SYSTEM": "System",
+  "TRACK": "Számok",
+  "TRACKS_FROM_ARTIST": "Számok az előadótól:",
+  "TRACK_SINGLE": "Szám",
+  "TRANSFERS": "Átvitelek",
   "WARNING": "Warning",
-  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
-  "ENABLE_125_SCALING": "Enable 125% scaling.",
   "YEAR": "Year",
-  "KNOW_MORE": "KNOW MORE"
+  "YES": "IGEN",
+  "YOUTUBE": "YouTube",
+  "YOUTUBE_INTERNET_ERROR": "Folytassuk a helyi zenéiddel, amíg vissza nem tér az internet.",
+  "YOUTUBE_NO_RESULTS": "Nincs találat a YouTube-on!",
+  "YOUTUBE_WELCOME": "Keresés a YouTube-on (vagy link bemásolása)"
 }
