--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -1,136 +1,137 @@
 {
-  "INTERNET_ERROR": "Verifique sua conexão com a internet...",
-  "COLLECTION": "Coleção",
-  "NOW_PLAYING": "Tocando agora",
-  "SETTING": "Configurações",
-  "OK": "OK",
-  "YES": "SIM",
-  "NO": "NÃO",
-  "ALBUM": "Álbuns",
-  "TRACK": "Músicas",
-  "ARTIST": "Artistas",
-  "THEME_MODE_LIGHT": "Claro",
-  "THEME_MODE_DARK": "Escuro",
-  "THEME_MODE_SYSTEM": "Seguir tema do sistema",
-  "OPTIONS": "Opções",
-  "DELETE_TRACK": "Deletar música",
-  "SEARCH_HISTORY_SUBHEADER": "Suas buscas recentes",
-  "SEARCH_RESULT_LOADER_LABEL": "Baixando sua música...",
-  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Procure & salve algumas músicas para vê-las aqui.\nGire para atualizar e ver as novidades.",
-  "COLLECTION_TOP_SUBHEADER_ALBUM": "Aqui está o último álbum que você salvou",
-  "COLLECTION_OTHER_SUBHEADER_ALBUM": "Aqui estão alguns outros álbuns",
-  "COLLECTION_TOP_SUBHEADER_TRACK": "Aqui está a última música que você salvou",
-  "COLLECTION_OTHER_SUBHEADER_TRACK": "Aqui estão suas outras músicas",
-  "COLLECTION_TOP_SUBHEADER_ARTIST": "Aqui está o último artista que você salvou",
-  "COLLECTION_OTHER_SUBHEADER_ARTIST": "Aqui estão os artistas salvos no seu dispositivo.",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Aqui estão algumas músicas salvas por você",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Alguns insights do álbum",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Deletar esse álbum?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Você tem certeza que quer apagar...",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Você que apagar?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Você quer apagar essa música do dispositivo?",
-  "NOW_PLAYING_NEXT_TRACK": "PRÓXIMO",
-  "NOW_PLAYING_PREVIOUS_TRACK": "ANTERIOR",
-  "NOW_PLAYING_NOT_PLAYING_TITLE": "Nada tocando...",
-  "SETTING_GITHUB": "GITHUB",
-  "SETTING_STAR_GITHUB": "Avaliar o projeto",
-  "SETTING_STARGAZERS_TITLE": "Projeto Stargazers",
-  "SETTING_STARGAZERS_SUBTITLE": "Muito obrigado pela sua compreensão",
-  "SETTING_LANGUAGE_TITLE": "Idioma",
-  "SETTING_LANGUAGE_SUBTITLE": "Mude o jeito que você enxerga o aplicativo",
-  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Reinicialização necessária",
-  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Você quer reiniciar o aplicativo agora?",
-  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Tradutores",
-  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Muito obrigado pelo seu apoio ao aplicativo",
-  "SETTING_ACCENT_COLOR_TITLE": "Cor de destaque",
-  "SETTING_ACCENT_COLOR_SUBTITLE": "Mude a cor de destaque do aplicativo",
-  "SETTING_THEME_TITLE": "Tema",
-  "SETTING_THEME_SUBTITLE": "Mude o tema do aplicativo para claro ou escuro",
-  "ABOUT_TITLE": "Sobre",
   "ABOUT_SUBTITLE": "Saiba mais sobre nós",
-  "NO_DOWNLOAD_UPDATE": "Seu aplicativo já está atualizado",
-  "DOWNLOAD_UPDATE": "BAIXAR ATUALIZAÇÃO",
-  "SETTING_APP_VERSION_TITLE": "Versão",
-  "SETTING_APP_VERSION_SUBTITLE": "Informações sobre a versão atual do aplicativo",
-  "SETTING_APP_VERSION_INSTALLED": "Versão instalada",
-  "SETTING_APP_VERSION_LATEST": "Última versão",
-  "MENU": "Menu",
-  "SEARCH_COLLECTION": "Procurar Coleção",
-  "SWITCH_THEME": "Trocar tema",
-  "PLAY": "Tocar",
-  "PAUSE": "Pausar",
-  "DELETE": "Deletar",
-  "SHARE": "Compartilhar",
-  "ADD_TO_PLAYLIST": "Adicionar à playlist",
-  "SAVE_TO_DOWNLOADS": "Salvar nos downloads",
-  "COLLECTION_SEARCH_WELCOME": "Adicione algo para pesquisar na sua coleção",
-  "COLLECTION_SEARCH_NO_RESULTS": "Nada parecido pôde ser encontrado em sua coleção",
-  "PLAYLISTS": "Playlists",
-  "PLAYLIST": "Playlist",
-  "PLAYLISTS_SUBHEADER": "Playlists criadas por você",
-  "PLAYLISTS_CREATE": "Criar uma nova playlist",
-  "PLAYLISTS_TEXT_FIELD_LABEL": "Nome da Playlist",
-  "PLAYLISTS_TEXT_FIELD_HINT": "Dê um nome para sua nova playlist",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Tem certeza?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Você quer remover essa playlist salva no seu dispositivo?",
-  "CANCEL": "CANCELAR",
-  "PLAYLIST_ADD_DIALOG_TITLE": "Adicionar à playlist",
-  "PLAYLIST_ADD_DIALOG_BODY": "Selecione uma playlist para adicionar essa música",
-  "PLAYLIST_TRACKS_SUBHEADER": "Aqui estão algumas músicas nessa playlist",
-  "TRANSFERS": "Transferências",
-  "SETTING_INDEXING_TITLE": "Indexando",
-  "SETTING_INDEXING_SUBTITLE": "Reindexando sua coleção de múscias",
-  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexando NUMBER_STRING de TOTAL_STRING músicas...",
-  "SETTING_INDEXING_DONE": "Sua coleção de músicas foi indexada.",
-  "SETTING_INDEXING_WARNING": "Não interrupa o processo.",
-  "REFRESH": "ATUALIZAR",
-  "SEARCH_NO_RECENT_SEARCHES": "Suas pesquisas recentes aparecerão aqui",
-  "NO_INTERNET_TITLE": "Sem internet",
-  "NO_INTERNET_SUBTITLE": "Verifique sua conexão.",
-  "NO_COLLECTION_TITLE": "Coleção vazia",
-  "NO_COLLECTION_SUBTITLE": "Nenhuma música encontrada.",
-  "DISCORD": "SERVIDOR DO DISCORD",
-  "EXIT_TITLE": "Sair",
-  "EXIT_SUBTITLE": "Você quer nos deixar?",
-  "A_TO_Z": "A à Z",
-  "DATE_ADDED": "Data adicionada",
-  "SETTING_ACCENT_COLOR_AUTOMATIC": "Cor de destaque automatica",
-  "SETTING_MISCELLANEOUS_TITLE": "Outras",
-  "SETTING_MISCELLANEOUS_SUBTITLE": "Outras configurações do aplicativo",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Ativar mecânicas do iOS",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Mudar plataforma para TargetPlatform.iOS",
-  "SELECTED_DIRECTORY": "Diretório selecionado:",
-  "LYRICS": "Letras",
-  "NOTIFICATION_LYRICS_TITLE": "Letras nas notificações",
-  "NOTIFICATION_LYRICS_SUBTITLE": "Mostrar letras numa notificação.",
-  "LYRICS_RETRIEVING": "Baixando letras...",
-  "LYRICS_NOT_FOUND": "Letras não disponíveis.",
-  "COMING_UP": "Coming Up",
-  "ALBUM_SINGLE": "Album",
-  "TRACK_SINGLE": "Track",
-  "ARTIST_SINGLE": "Artist",
-  "SEARCH": "Search",
-  "ALBUMS_FROM_ARTIST": "Albums from this artist.",
-  "TRACKS_FROM_ARTIST": "Tracks from this artist.",
-  "REMOVE": "REMOVE",
+  "ABOUT_TITLE": "Sobre",
   "ADD_NEW_FOLDER": "ADD NEW FOLDER",
   "ADD_TO_NOW_PLAYING": "Add to now playing",
-  "PLAY_NOW": "Play now",
-  "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
-  "SELECTED_DIRECTORIES": "Selected directories:",
-  "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
+  "ADD_TO_PLAYLIST": "Adicionar à playlist",
+  "ALBUM": "Álbuns",
+  "ALBUMS_FROM_ARTIST": "Albums from this artist.",
+  "ALBUM_SINGLE": "Album",
+  "ARTIST": "Artistas",
+  "ARTIST_SINGLE": "Artist",
+  "A_TO_Z": "A à Z",
+  "BUFFERING": "Buffering...",
+  "CANCEL": "CANCELAR",
+  "COLLECTION": "Coleção",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Você tem certeza que quer apagar...",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Deletar esse álbum?",
+  "COLLECTION_ALBUM_INFO_SUBHEADER": "Alguns insights do álbum",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Você quer remover essa playlist salva no seu dispositivo?",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Tem certeza?",
+  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Aqui estão algumas músicas salvas por você",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Você quer apagar essa música do dispositivo?",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Você que apagar?",
   "COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
+  "COLLECTION_OTHER_SUBHEADER_ALBUM": "Aqui estão alguns outros álbuns",
+  "COLLECTION_OTHER_SUBHEADER_ARTIST": "Aqui estão os artistas salvos no seu dispositivo.",
+  "COLLECTION_OTHER_SUBHEADER_TRACK": "Aqui estão suas outras músicas",
+  "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
+  "COLLECTION_SEARCH_NO_RESULTS": "Nada parecido pôde ser encontrado em sua coleção",
+  "COLLECTION_SEARCH_WELCOME": "Adicione algo para pesquisar na sua coleção",
+  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Procure & salve algumas músicas para vê-las aqui.\nGire para atualizar e ver as novidades.",
+  "COLLECTION_TOP_SUBHEADER_ALBUM": "Aqui está o último álbum que você salvou",
+  "COLLECTION_TOP_SUBHEADER_ARTIST": "Aqui está o último artista que você salvou",
+  "COLLECTION_TOP_SUBHEADER_TRACK": "Aqui está a última música que você salvou",
+  "COMING_UP": "Coming Up",
+  "DATE_ADDED": "Data adicionada",
+  "DELETE": "Deletar",
+  "DELETE_TRACK": "Deletar música",
+  "DISCORD": "SERVIDOR DO DISCORD",
+  "DOWNLOAD_UPDATE": "BAIXAR ATUALIZAÇÃO",
+  "ENABLE_125_SCALING": "Enable 125% scaling.",
+  "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
+  "EXIT_SUBTITLE": "Você quer nos deixar?",
+  "EXIT_TITLE": "Sair",
+  "INTERNET_ERROR": "Verifique sua conexão com a internet...",
+  "KNOW_MORE": "KNOW MORE",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
+  "LYRICS": "Letras",
+  "LYRICS_NOT_FOUND": "Letras não disponíveis.",
+  "LYRICS_RETRIEVING": "Baixando letras...",
+  "MENU": "Menu",
+  "NO": "NÃO",
+  "NOTIFICATION_LYRICS_SUBTITLE": "Mostrar letras numa notificação.",
+  "NOTIFICATION_LYRICS_TITLE": "Letras nas notificações",
+  "NOW_PLAYING": "Tocando agora",
+  "NOW_PLAYING_NEXT_TRACK": "PRÓXIMO",
+  "NOW_PLAYING_NOT_PLAYING_TITLE": "Nada tocando...",
+  "NOW_PLAYING_PREVIOUS_TRACK": "ANTERIOR",
+  "NO_COLLECTION_SUBTITLE": "Nenhuma música encontrada.",
+  "NO_COLLECTION_TITLE": "Coleção vazia",
+  "NO_DOWNLOAD_UPDATE": "Seu aplicativo já está atualizado",
+  "NO_INTERNET_SUBTITLE": "Verifique sua conexão.",
+  "NO_INTERNET_TITLE": "Sem internet",
+  "OK": "OK",
+  "OPTIONS": "Opções",
+  "PAUSE": "Pausar",
+  "PLAY": "Tocar",
+  "PLAYLIST": "Playlists",
+  "PLAYLISTS_CREATE": "Criar uma nova playlist",
+  "PLAYLISTS_SUBHEADER": "Playlists criadas por você",
+  "PLAYLISTS_TEXT_FIELD_HINT": "Dê um nome para sua nova playlist",
+  "PLAYLISTS_TEXT_FIELD_LABEL": "Nome da Playlist",
+  "PLAYLIST_ADD_DIALOG_BODY": "Selecione uma playlist para adicionar essa música",
+  "PLAYLIST_ADD_DIALOG_TITLE": "Adicionar à playlist",
+  "PLAYLIST_TRACKS_SUBHEADER": "Aqui estão algumas músicas nessa playlist",
+  "PLAY_NOW": "Play now",
   "RECOMMENDATIONS": "Recommendations",
-  "YOUTUBE_WELCOME": "Search for music or give a link",
-  "YOUTUBE_NO_RESULTS": "Nothing like that could be found.",
-  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online.",
+  "REFRESH": "ATUALIZAR",
+  "REMOVE": "REMOVE",
   "RETRIEVING_INFO": "Retrieving info",
   "RETRIEVING_LINK": "Retrieving stream",
+  "SAVE_TO_DOWNLOADS": "Salvar nos downloads",
+  "SEARCH": "Search",
+  "SEARCH_COLLECTION": "Procurar Coleção",
+  "SEARCH_HISTORY_SUBHEADER": "Suas buscas recentes",
+  "SEARCH_NO_RECENT_SEARCHES": "Suas pesquisas recentes aparecerão aqui",
+  "SEARCH_RESULT_LOADER_LABEL": "Baixando sua música...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SELECTED_DIRECTORIES": "Selected directories:",
+  "SELECTED_DIRECTORY": "Diretório selecionado:",
+  "SETTING": "Configurações",
+  "SETTING_ACCENT_COLOR_AUTOMATIC": "Cor de destaque automatica",
+  "SETTING_ACCENT_COLOR_SUBTITLE": "Mude a cor de destaque do aplicativo",
+  "SETTING_ACCENT_COLOR_TITLE": "Cor de destaque",
+  "SETTING_APP_VERSION_INSTALLED": "Versão instalada",
+  "SETTING_APP_VERSION_LATEST": "Última versão",
+  "SETTING_APP_VERSION_SUBTITLE": "Informações sobre a versão atual do aplicativo",
+  "SETTING_APP_VERSION_TITLE": "Versão",
+  "SETTING_GITHUB": "GITHUB",
+  "SETTING_INDEXING_DONE": "Sua coleção de músicas foi indexada.",
+  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexando NUMBER_STRING de TOTAL_STRING músicas...",
+  "SETTING_INDEXING_SUBTITLE": "Reindexando sua coleção de múscias",
+  "SETTING_INDEXING_TITLE": "Indexando",
+  "SETTING_INDEXING_WARNING": "Não interrupa o processo.",
+  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Muito obrigado pelo seu apoio ao aplicativo",
+  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Tradutores",
+  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Você quer reiniciar o aplicativo agora?",
+  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Reinicialização necessária",
+  "SETTING_LANGUAGE_SUBTITLE": "Mude o jeito que você enxerga o aplicativo",
+  "SETTING_LANGUAGE_TITLE": "Idioma",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Mudar plataforma para TargetPlatform.iOS",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Ativar mecânicas do iOS",
+  "SETTING_MISCELLANEOUS_SUBTITLE": "Outras configurações do aplicativo",
+  "SETTING_MISCELLANEOUS_TITLE": "Outras",
+  "SETTING_STARGAZERS_SUBTITLE": "Muito obrigado pela sua compreensão",
+  "SETTING_STARGAZERS_TITLE": "Projeto Stargazers",
+  "SETTING_STAR_GITHUB": "Avaliar o projeto",
+  "SETTING_THEME_SUBTITLE": "Mude o tema do aplicativo para claro ou escuro",
+  "SETTING_THEME_TITLE": "Tema",
+  "SHARE": "Compartilhar",
   "STARTING_PLAYBACK": "Starting playback",
-  "BUFFERING": "Buffering...",
+  "SWITCH_THEME": "Trocar tema",
+  "THEME_MODE_DARK": "Escuro",
+  "THEME_MODE_LIGHT": "Claro",
+  "THEME_MODE_SYSTEM": "System",
+  "TRACK": "Músicas",
+  "TRACKS_FROM_ARTIST": "Tracks from this artist.",
+  "TRACK_SINGLE": "Track",
+  "TRANSFERS": "Transferências",
   "WARNING": "Warning",
-  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
-  "ENABLE_125_SCALING": "Enable 125% scaling.",
   "YEAR": "Year",
-  "KNOW_MORE": "KNOW MORE"
+  "YES": "SIM",
+  "YOUTUBE": "YouTube",
+  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online.",
+  "YOUTUBE_NO_RESULTS": "Nothing like that could be found.",
+  "YOUTUBE_WELCOME": "Search for music or give a link"
 }
