--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -1,136 +1,137 @@
 {
-  "INTERNET_ERROR": "Проверьте интернет-соединение.",
-  "COLLECTION": "Коллекция",
-  "NOW_PLAYING": "Плеер",
-  "SETTING": "Настройки",
-  "OK": "ОК",
-  "YES": "ДА",
-  "NO": "НЕТ",
-  "ALBUM": "Альбомы",
-  "TRACK": "Треки",
-  "ARTIST": "Исполнители",
-  "THEME_MODE_LIGHT": "Светлая",
-  "THEME_MODE_DARK": "Тёмная",
-  "THEME_MODE_SYSTEM": "Как в системе",
-  "OPTIONS": "Параметры",
-  "DELETE_TRACK": "Удалить трек",
-  "SEARCH_HISTORY_SUBHEADER": "Недавние запросы",
-  "SEARCH_RESULT_LOADER_LABEL": "Получаем музыку...",
-  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Ищите и сохраняйте музыку, чтобы увидеть её здесь.",
-  "COLLECTION_TOP_SUBHEADER_ALBUM": "Последний сохранённый альбом",
-  "COLLECTION_OTHER_SUBHEADER_ALBUM": "Другие альбомы",
-  "COLLECTION_TOP_SUBHEADER_TRACK": "Последний сохранённый трек",
-  "COLLECTION_OTHER_SUBHEADER_TRACK": "Другие треки",
-  "COLLECTION_TOP_SUBHEADER_ARTIST": "Последний сохранённый исполнитель",
-  "COLLECTION_OTHER_SUBHEADER_ARTIST": "Другие исполнители",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Сохранённые треки",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Немного об альбоме",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Удалить альбом",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Вы действительно хотите удалить альбом?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Удалить трек",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Вы действительно хотите удалить сохранённый трек?",
-  "NOW_PLAYING_NEXT_TRACK": "ВПЕРЁД",
-  "NOW_PLAYING_PREVIOUS_TRACK": "НАЗАД",
-  "NOW_PLAYING_NOT_PLAYING_TITLE": "Ничего не играет.",
-  "SETTING_GITHUB": "GITHUB",
-  "SETTING_STAR_GITHUB": "Оценить проект",
-  "SETTING_STARGAZERS_TITLE": "Оценили проект",
-  "SETTING_STARGAZERS_SUBTITLE": "Спасибо за вашу поддержку",
-  "SETTING_LANGUAGE_TITLE": "Язык",
-  "SETTING_LANGUAGE_SUBTITLE": "Изменить язык приложения",
-  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Необходимо перезапустить приложение",
-  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Перезапустить сейчас?",
-  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Переводчики",
-  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Огромное спасибо за вашу поддержку",
-  "SETTING_ACCENT_COLOR_TITLE": "Цвет акцента",
-  "SETTING_ACCENT_COLOR_SUBTITLE": "Изменить дополнительный цвет приложения",
-  "SETTING_THEME_TITLE": "Тема",
-  "SETTING_THEME_SUBTITLE": "Сменить тему приложения",
-  "ABOUT_TITLE": "О приложении",
   "ABOUT_SUBTITLE": "Информация о проекте и его разработчиках.",
-  "NO_DOWNLOAD_UPDATE": "Установлена последняя версия",
-  "DOWNLOAD_UPDATE": "СКАЧАТЬ ОБНОВЛЕНИЕ",
-  "SETTING_APP_VERSION_TITLE": "Версия приложения",
-  "SETTING_APP_VERSION_SUBTITLE": "Информация о текущей версии приложения",
-  "SETTING_APP_VERSION_INSTALLED": "Текущая версия",
-  "SETTING_APP_VERSION_LATEST": "Последняя версия",
-  "MENU": "Меню",
-  "SEARCH_COLLECTION": "Поиск по коллекции",
-  "SWITCH_THEME": "Сменить тему",
-  "PLAY": "Плей",
-  "PAUSE": "Пауза",
-  "DELETE": "Удалить",
-  "SHARE": "Поделиться",
-  "ADD_TO_PLAYLIST": "Добавить в плейлист",
-  "SAVE_TO_DOWNLOADS": "Сохранить в \"Downloads\"",
-  "COLLECTION_SEARCH_WELCOME": "Поиск среди загруженных треков",
-  "COLLECTION_SEARCH_NO_RESULTS": "В коллекции ничего не найдено",
-  "PLAYLISTS": "Плейлисты",
-  "PLAYLIST": "Плейлист",
-  "PLAYLISTS_SUBHEADER": "Ваши плейлисты",
-  "PLAYLISTS_CREATE": "Создать плейлист",
-  "PLAYLISTS_TEXT_FIELD_LABEL": "Название",
-  "PLAYLISTS_TEXT_FIELD_HINT": "Назовите плейлист",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Вы уверены?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Хотите удалить плейлист?",
-  "CANCEL": "ОТМЕНА",
-  "PLAYLIST_ADD_DIALOG_TITLE": "Добавить в плейлист",
-  "PLAYLIST_ADD_DIALOG_BODY": "Выберите плейлист",
-  "PLAYLIST_TRACKS_SUBHEADER": "Треки в плейлисте",
-  "TRANSFERS": "Transfers",
-  "SETTING_INDEXING_TITLE": "Индексация",
-  "SETTING_INDEXING_SUBTITLE": "Поиск треков на устройстве",
-  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Индексировано NUMBER_STRING треков из TOTAL_STRING...",
-  "SETTING_INDEXING_DONE": "Ваша коллекция индексирована",
-  "SETTING_INDEXING_WARNING": "Не прерывайте процесс.",
-  "REFRESH": "ОБНОВИТЬ",
-  "SEARCH_NO_RECENT_SEARCHES": "Здесь появится история поиска",
-  "NO_INTERNET_TITLE": "Нет доступа в Интернет",
-  "NO_INTERNET_SUBTITLE": "Проверьте подключение.",
-  "NO_COLLECTION_TITLE": "Пустая коллекция",
-  "NO_COLLECTION_SUBTITLE": "Ничего не найдено.",
-  "DISCORD": "DISCORD",
-  "EXIT_TITLE": "Выход",
-  "EXIT_SUBTITLE": "Хотите выйти?",
-  "A_TO_Z": "По алфавиту",
-  "DATE_ADDED": "По дате добавления",
-  "SETTING_ACCENT_COLOR_AUTOMATIC": "Автоматически",
-  "SETTING_MISCELLANEOUS_TITLE": "Прочее",
-  "SETTING_MISCELLANEOUS_SUBTITLE": "Другие настройки",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Включить механики iOS",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Задать платформу TargetPlatform.iOS",
-  "SELECTED_DIRECTORY": "Selected directory:",
-  "LYRICS": "Lyrics",
-  "NOTIFICATION_LYRICS_TITLE": "Notification lyrics",
-  "NOTIFICATION_LYRICS_SUBTITLE": "Show lyrics in a notification.",
-  "LYRICS_RETRIEVING": "Retrieving lyrics...",
-  "LYRICS_NOT_FOUND": "Lyrics not found.",
-  "COMING_UP": "Coming Up",
-  "ALBUM_SINGLE": "Album",
-  "TRACK_SINGLE": "Track",
-  "ARTIST_SINGLE": "Artist",
-  "SEARCH": "Search",
-  "ALBUMS_FROM_ARTIST": "Albums from this artist.",
-  "TRACKS_FROM_ARTIST": "Tracks from this artist.",
-  "REMOVE": "REMOVE",
+  "ABOUT_TITLE": "О приложении",
   "ADD_NEW_FOLDER": "ADD NEW FOLDER",
   "ADD_TO_NOW_PLAYING": "Add to now playing",
-  "PLAY_NOW": "Play now",
-  "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
-  "SELECTED_DIRECTORIES": "Selected directories:",
-  "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
+  "ADD_TO_PLAYLIST": "Добавить в плейлист",
+  "ALBUM": "Альбомы",
+  "ALBUMS_FROM_ARTIST": "Albums from this artist.",
+  "ALBUM_SINGLE": "Album",
+  "ARTIST": "Исполнители",
+  "ARTIST_SINGLE": "Artist",
+  "A_TO_Z": "По алфавиту",
+  "BUFFERING": "Buffering...",
+  "CANCEL": "ОТМЕНА",
+  "COLLECTION": "Коллекция",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Вы действительно хотите удалить альбом?",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Удалить альбом",
+  "COLLECTION_ALBUM_INFO_SUBHEADER": "Немного об альбоме",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Хотите удалить плейлист?",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Вы уверены?",
+  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Сохранённые треки",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Вы действительно хотите удалить сохранённый трек?",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Удалить трек",
   "COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
+  "COLLECTION_OTHER_SUBHEADER_ALBUM": "Другие альбомы",
+  "COLLECTION_OTHER_SUBHEADER_ARTIST": "Другие исполнители",
+  "COLLECTION_OTHER_SUBHEADER_TRACK": "Другие треки",
+  "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
+  "COLLECTION_SEARCH_NO_RESULTS": "В коллекции ничего не найдено",
+  "COLLECTION_SEARCH_WELCOME": "Поиск среди загруженных треков",
+  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Ищите и сохраняйте музыку, чтобы увидеть её здесь.",
+  "COLLECTION_TOP_SUBHEADER_ALBUM": "Последний сохранённый альбом",
+  "COLLECTION_TOP_SUBHEADER_ARTIST": "Последний сохранённый исполнитель",
+  "COLLECTION_TOP_SUBHEADER_TRACK": "Последний сохранённый трек",
+  "COMING_UP": "Coming Up",
+  "DATE_ADDED": "По дате добавления",
+  "DELETE": "Удалить",
+  "DELETE_TRACK": "Удалить трек",
+  "DISCORD": "DISCORD",
+  "DOWNLOAD_UPDATE": "СКАЧАТЬ ОБНОВЛЕНИЕ",
+  "ENABLE_125_SCALING": "Enable 125% scaling.",
+  "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
+  "EXIT_SUBTITLE": "Хотите выйти?",
+  "EXIT_TITLE": "Выход",
+  "INTERNET_ERROR": "Проверьте интернет-соединение.",
+  "KNOW_MORE": "KNOW MORE",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
+  "LYRICS": "Lyrics",
+  "LYRICS_NOT_FOUND": "Lyrics not found.",
+  "LYRICS_RETRIEVING": "Retrieving lyrics...",
+  "MENU": "Меню",
+  "NO": "НЕТ",
+  "NOTIFICATION_LYRICS_SUBTITLE": "Show lyrics in a notification.",
+  "NOTIFICATION_LYRICS_TITLE": "Notification lyrics",
+  "NOW_PLAYING": "Плеер",
+  "NOW_PLAYING_NEXT_TRACK": "ВПЕРЁД",
+  "NOW_PLAYING_NOT_PLAYING_TITLE": "Ничего не играет.",
+  "NOW_PLAYING_PREVIOUS_TRACK": "НАЗАД",
+  "NO_COLLECTION_SUBTITLE": "Ничего не найдено.",
+  "NO_COLLECTION_TITLE": "Пустая коллекция",
+  "NO_DOWNLOAD_UPDATE": "Установлена последняя версия",
+  "NO_INTERNET_SUBTITLE": "Проверьте подключение.",
+  "NO_INTERNET_TITLE": "Нет доступа в Интернет",
+  "OK": "ОК",
+  "OPTIONS": "Параметры",
+  "PAUSE": "Пауза",
+  "PLAY": "Плей",
+  "PLAYLIST": "Playlists",
+  "PLAYLISTS_CREATE": "Создать плейлист",
+  "PLAYLISTS_SUBHEADER": "Ваши плейлисты",
+  "PLAYLISTS_TEXT_FIELD_HINT": "Назовите плейлист",
+  "PLAYLISTS_TEXT_FIELD_LABEL": "Название",
+  "PLAYLIST_ADD_DIALOG_BODY": "Выберите плейлист",
+  "PLAYLIST_ADD_DIALOG_TITLE": "Добавить в плейлист",
+  "PLAYLIST_TRACKS_SUBHEADER": "Треки в плейлисте",
+  "PLAY_NOW": "Play now",
   "RECOMMENDATIONS": "Recommendations",
-  "YOUTUBE_WELCOME": "Search for music or give a link",
-  "YOUTUBE_NO_RESULTS": "Nothing like that could be found.",
-  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online.",
+  "REFRESH": "ОБНОВИТЬ",
+  "REMOVE": "REMOVE",
   "RETRIEVING_INFO": "Retrieving info",
   "RETRIEVING_LINK": "Retrieving stream",
+  "SAVE_TO_DOWNLOADS": "Сохранить в \"Downloads\"",
+  "SEARCH": "Search",
+  "SEARCH_COLLECTION": "Поиск по коллекции",
+  "SEARCH_HISTORY_SUBHEADER": "Недавние запросы",
+  "SEARCH_NO_RECENT_SEARCHES": "Здесь появится история поиска",
+  "SEARCH_RESULT_LOADER_LABEL": "Получаем музыку...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SELECTED_DIRECTORIES": "Selected directories:",
+  "SELECTED_DIRECTORY": "Selected directory:",
+  "SETTING": "Настройки",
+  "SETTING_ACCENT_COLOR_AUTOMATIC": "Автоматически",
+  "SETTING_ACCENT_COLOR_SUBTITLE": "Изменить дополнительный цвет приложения",
+  "SETTING_ACCENT_COLOR_TITLE": "Цвет акцента",
+  "SETTING_APP_VERSION_INSTALLED": "Текущая версия",
+  "SETTING_APP_VERSION_LATEST": "Последняя версия",
+  "SETTING_APP_VERSION_SUBTITLE": "Информация о текущей версии приложения",
+  "SETTING_APP_VERSION_TITLE": "Версия приложения",
+  "SETTING_GITHUB": "GITHUB",
+  "SETTING_INDEXING_DONE": "Ваша коллекция индексирована",
+  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Индексировано NUMBER_STRING треков из TOTAL_STRING...",
+  "SETTING_INDEXING_SUBTITLE": "Поиск треков на устройстве",
+  "SETTING_INDEXING_TITLE": "Индексация",
+  "SETTING_INDEXING_WARNING": "Не прерывайте процесс.",
+  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Огромное спасибо за вашу поддержку",
+  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Переводчики",
+  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Перезапустить сейчас?",
+  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Необходимо перезапустить приложение",
+  "SETTING_LANGUAGE_SUBTITLE": "Изменить язык приложения",
+  "SETTING_LANGUAGE_TITLE": "Язык",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Задать платформу TargetPlatform.iOS",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Включить механики iOS",
+  "SETTING_MISCELLANEOUS_SUBTITLE": "Другие настройки",
+  "SETTING_MISCELLANEOUS_TITLE": "Прочее",
+  "SETTING_STARGAZERS_SUBTITLE": "Спасибо за вашу поддержку",
+  "SETTING_STARGAZERS_TITLE": "Оценили проект",
+  "SETTING_STAR_GITHUB": "Оценить проект",
+  "SETTING_THEME_SUBTITLE": "Сменить тему приложения",
+  "SETTING_THEME_TITLE": "Тема",
+  "SHARE": "Поделиться",
   "STARTING_PLAYBACK": "Starting playback",
-  "BUFFERING": "Buffering...",
+  "SWITCH_THEME": "Сменить тему",
+  "THEME_MODE_DARK": "Тёмная",
+  "THEME_MODE_LIGHT": "Светлая",
+  "THEME_MODE_SYSTEM": "System",
+  "TRACK": "Треки",
+  "TRACKS_FROM_ARTIST": "Tracks from this artist.",
+  "TRACK_SINGLE": "Track",
+  "TRANSFERS": "Transfers",
   "WARNING": "Warning",
-  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
-  "ENABLE_125_SCALING": "Enable 125% scaling.",
   "YEAR": "Year",
-  "KNOW_MORE": "KNOW MORE"
+  "YES": "ДА",
+  "YOUTUBE": "YouTube",
+  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online.",
+  "YOUTUBE_NO_RESULTS": "Nothing like that could be found.",
+  "YOUTUBE_WELCOME": "Search for music or give a link"
 }
